--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,13 @@
 
 7-16 [每日一语 2024.7.16](/articles/cdt/338822.md)
 
+7-17 [学之智｜中国政府部门债务现状](/articles/cdt/338824.md)
+
+7-17 [中国新闻周刊｜“冒牌教授”魏新河行骗记](/articles/cdt/338827.md)
+
 7-17 [大浪淘沙｜“996”是民族复兴的最大动力](/articles/cdt/338829.md)
+
+7-17 [【立此存照】安徽纪检监察｜传播负能量和错误观点行为认定与处理](/articles/cdt/338832.md)
 
 7-16 [看理想｜这次是食用油混装，下次会是什么？](/articles/cdt/338834.md)
 
@@ -594,10 +600,4 @@
 6-9 [【CDT周报】第173期：依然被屏蔽的历史，依然未结束的抗争](/articles/cdt/339835.md)
 
 6-8 [每日一语 2024.6.7](/articles/cdt/339837.md)
-
-6-8 [天下说法｜六盘水案全案不起诉，法律的胜利？](/articles/cdt/339843.md)
-
-6-8 [【404文库】智谷趋势｜“史上最难高考”来袭：413万复读生一起卷 ，河南广东要哭了！](/articles/cdt/339847.md)
-
-6-8 [北青深一度｜离婚诉讼中，被层层“消解”的家暴｜深度报道](/articles/cdt/339850.md)
 
