--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-17 [英中关系大转折: 中国在英国新的防务审查中被标为“致命”威胁](/articles/voa/1014048.md)
+
+7-17 [朝鲜强迫劳动可能构成反人类罪行](/articles/voa/1014049.md)
+
+7-17 [美国和拉美国家举办峰会应对经济问题](/articles/voa/1014050.md)
+
 7-17 [中国网络观察: 官民争议“历史的垃圾时间”](/articles/voa/1014051.md)
 
 7-17 [拜登选情遭遇严重挫折，规模庞大的汽车司机工会可能拒绝为他背书](/articles/voa/1014052.md)
@@ -594,10 +600,4 @@
 7-5 [中国军事活动增多，台湾呼吁北京勿加剧紧张局势](/articles/voa/1014346.md)
 
 7-5 [印度总理莫迪将访问俄罗斯](/articles/voa/1014347.md)
-
-7-5 [欧盟对中国电动汽车启动加税之际北京敦促欧盟谈判“展现诚意”](/articles/voa/1014348.md)
-
-7-5 [部分国家和组织在联合国严批中国人权记录，其他发言者争相为北京捧场](/articles/voa/1014349.md)
-
-7-5 [“我不仅是为我发声”：法轮功学员在华盛顿讲述遭中共强摘器官经历](/articles/voa/1014350.md)
 
