--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-17 [阿斯彭安全论坛执行主任：若特朗普再当选，美中关系将充满波折](/articles/voa/1014040.md)
+
 7-17 [俄罗斯报告摧毁了13架乌克兰无人机](/articles/voa/1014041.md)
 
 7-17 [台湾民进党、国民党代表团与前国务卿蓬佩奥等共和党人会面](/articles/voa/1014042.md)
@@ -598,6 +600,4 @@
 7-5 [特斯拉首次进入中国政府采购清单](/articles/voa/1014338.md)
 
 7-5 [日本对中国在四国海盆海域设浮标表遗憾，北京声称公海科研自由](/articles/voa/1014339.md)
-
-7-5 [乌鲁木齐七五事件15周年：新疆维吾尔人面临民族同化](/articles/voa/1014340.md)
 
