--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-17 [马航MH17空难十周年正义仍未实现 罹难者亲属齐聚悼念](/articles/voa/1014039.md)
+
 7-17 [阿斯彭安全论坛执行主任：若特朗普再当选，美中关系将充满波折](/articles/voa/1014040.md)
 
 7-17 [俄罗斯报告摧毁了13架乌克兰无人机](/articles/voa/1014041.md)
@@ -598,6 +600,4 @@
 7-6 [海外华人遇袭登微博热搜，分析: 恐为平衡或洗白中国仇外犯行](/articles/voa/1014337.md)
 
 7-5 [特斯拉首次进入中国政府采购清单](/articles/voa/1014338.md)
-
-7-5 [日本对中国在四国海盆海域设浮标表遗憾，北京声称公海科研自由](/articles/voa/1014339.md)
 
