--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-17 [拜登在竞选活动中呼吁美国人谴责一切形式的暴力](/articles/voa/1014037.md)
+
 7-17 [特朗普称台湾应为其防务向美国支付费用](/articles/voa/1014038.md)
 
 7-17 [马航MH17空难十周年正义仍未实现 罹难者亲属齐聚悼念](/articles/voa/1014039.md)
@@ -598,6 +600,4 @@
 7-6 [印度外交秘书：莫迪访俄将争取被骗加入俄军的印度人提前回国](/articles/voa/1014335.md)
 
 7-6 [英国工党议会选举大胜执政后，外交政策是否会有重大变化？](/articles/voa/1014336.md)
-
-7-6 [海外华人遇袭登微博热搜，分析: 恐为平衡或洗白中国仇外犯行](/articles/voa/1014337.md)
 
