--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-17 [读懂《乡下人的悲歌》，你就懂了万斯和2024年大选](/articles/nyt/1042570.md)
+
 7-17 [若特朗普-万斯当选，“弱势美元”时代将到来？](/articles/nyt/1042571.md)
 
 7-17 [郭文贵欺诈等九项罪名成立，或面临数十年监禁](/articles/nyt/1042572.md)
@@ -598,6 +600,4 @@
 4-12 [对尹锡悦的“审判”：韩国执政党在国会选举中惨败](/articles/nyt/1042868.md)
 
 4-12 [受中国驱动，全球燃煤发电卷土重来](/articles/nyt/1042869.md)
-
-4-11 [美日进一步加强同军事及经济合作，与中国抗衡](/articles/nyt/1042870.md)
 
