--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-17 [永一与恒天｜何伟的海外新书，何伟的海内旧事](/articles/cdt/338808.md)
+
 7-17 [雷叔写故事｜李雪琴的瓜，背后水多深？](/articles/cdt/338810.md)
 
 7-17 [往事与随想｜22天了，杀害胡友平的凶手是谁？](/articles/cdt/338812.md)
@@ -598,6 +600,4 @@
 6-9 [那些原本是废话的常识｜比“拱城里白菜”更粗鄙的是“生活的教育”](/articles/cdt/339828.md)
 
 6-8 [【CDTV】靠浪兄弟｜打工人都背的包是压缩包](/articles/cdt/339830.md)
-
-6-8 [【404文库】小萝卜丝｜网传某省立医院内，一座18层的楼，有7层都是干部病房](/articles/cdt/339833.md)
 
