--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-17 [冯德莱恩连任欧委会主席没有悬念了吗？](/articles/dw/1024867.md)
+
 7-17 [对中国电动车征收特别关税 欧盟各国意见不一](/articles/dw/1024868.md)
 
 7-17 [IMF上调对中、印、欧经济增长预测](/articles/dw/1024869.md)
@@ -598,6 +600,4 @@
 6-19 [德国博主假扮吉祥物混入欧洲杯赛场](/articles/dw/1025165.md)
 
 6-19 [普京会金正恩 朝俄签订防卫互助协定](/articles/dw/1025166.md)
-
-6-19 [佩洛西等美议员在达兰萨拉与达赖喇嘛会晤](/articles/dw/1025167.md)
 
