--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-17 [彭博：白宫拟采用最严厉的贸易措施阻止高端芯片流入中国](/articles/voa/1014031.md)
+
+7-17 [路透独家：中菲设立处理南中国海争端的新渠道](/articles/voa/1014032.md)
+
 7-17 [前白宫国安官员被控担任韩国政府代理人](/articles/voa/1014033.md)
 
 7-17 [泰国警方称曼谷酒店六人死于氰化物毒杀，嫌疑人是死者之一](/articles/voa/1014034.md)
@@ -596,8 +600,4 @@
 7-6 [内塔尼亚胡表示与哈马斯的停火谈判将于下周恢复](/articles/voa/1014329.md)
 
 7-6 [狱中遭监管“包夹” 中国公民运动领袖许志永再传被酷刑](/articles/voa/1014330.md)
-
-7-6 [印度在商业压力下考虑放宽对中国工人的签证限制](/articles/voa/1014331.md)
-
-7-6 [世界反兴奋剂机构对美国调查中国游泳运动员兴奋剂案表示“失望”](/articles/voa/1014332.md)
 
