--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-17 [特朗普遇枪击震惊日本 专家:“若谋杀成功，中国就会受益”](/articles/voa/1014028.md)
+
+7-17 [中俄在南中国海联合军演中进行实弹射击](/articles/voa/1014029.md)
+
+7-17 [北京报复美国对台新军售 宣布停止中美军控谈判](/articles/voa/1014030.md)
+
 7-17 [彭博：白宫拟采用最严厉的贸易措施阻止高端芯片流入中国](/articles/voa/1014031.md)
 
 7-17 [路透独家：中菲设立处理南中国海争端的新渠道](/articles/voa/1014032.md)
@@ -594,10 +600,4 @@
 7-6 [与中国接壤的缅甸东北地区战火再起，民族武装联手攻击军政权阵地](/articles/voa/1014326.md)
 
 7-6 [台湾渔船在接近日本海域遭日方登检扣押，经台日交涉缴交罚金后获释](/articles/voa/1014327.md)
-
-7-6 [伦敦维吾尔族抗议: 纪念七五事件15周年，呼吁工党政府对中国施压](/articles/voa/1014328.md)
-
-7-6 [内塔尼亚胡表示与哈马斯的停火谈判将于下周恢复](/articles/voa/1014329.md)
-
-7-6 [狱中遭监管“包夹” 中国公民运动领袖许志永再传被酷刑](/articles/voa/1014330.md)
 
