--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-18 [人间三角｜垃圾信息的狂欢](/articles/cdt/338803.md)
+
 7-18 [星球商业评论｜看起来很刑的人越来越多了](/articles/cdt/338806.md)
 
 7-17 [永一与恒天｜何伟的海外新书，何伟的海内旧事](/articles/cdt/338808.md)
@@ -598,6 +600,4 @@
 6-9 [Matters｜高考是我最恨的日子](/articles/cdt/339823.md)
 
 6-9 [【CDT专访】《剩女时代》作者洪理达：中国有越来越多的年轻女性冒着政治风险挺身而出](/articles/cdt/339826.md)
-
-6-9 [那些原本是废话的常识｜比“拱城里白菜”更粗鄙的是“生活的教育”](/articles/cdt/339828.md)
 
