--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-18 [七国集团贸易部长就解决不公平贸易问题加强谈判](/articles/voa/1014021.md)
+
+7-18 [G7贸易部长会议: 应对中国产能过剩和贸易扭曲](/articles/voa/1014022.md)
+
+7-18 [中国商场大火造成16人死亡和人员被困](/articles/voa/1014023.md)
+
+7-18 [推特上的中国：三中全会后，中国将迈入“红色进步时代”？](/articles/voa/1014024.md)
+
 7-18 [香港新任记协主席被《华尔街日报》解雇](/articles/voa/1014025.md)
 
 7-18 [两名美国资深参议员联名致信拜登，要求白宫明确美国对菲律宾的安全承诺](/articles/voa/1014026.md)
@@ -592,12 +600,4 @@
 7-6 [消息人士称哈马斯接受了美国针对以色列人质谈判的提议](/articles/voa/1014319.md)
 
 7-6 [斯塔默上任英国首相后承诺开始“重建英国”](/articles/voa/1014320.md)
-
-7-6 [伊朗新总统决选揭晓 改革派佩泽什基安胜出](/articles/voa/1014321.md)
-
-7-6 [极端降雨量洪水高涨 洞庭湖决堤迁离5千多人](/articles/voa/1014322.md)
-
-7-6 [摩尔多瓦外长称有权驱逐更多俄罗斯外交官](/articles/voa/1014323.md)
-
-7-6 [南中国海紧张升级，美国是否派兵援助菲律宾？](/articles/voa/1014324.md)
 
