--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-18 [卫生官员说，以色列空袭打死九名巴勒斯坦人](/articles/voa/1014019.md)
+
+7-18 [日本召开太平洋岛国峰会 力阻中国扩张与气候变迁](/articles/voa/1014020.md)
+
 7-18 [七国集团贸易部长就解决不公平贸易问题加强谈判](/articles/voa/1014021.md)
 
 7-18 [G7贸易部长会议: 应对中国产能过剩和贸易扭曲](/articles/voa/1014022.md)
@@ -596,8 +600,4 @@
 7-6 [三中全会军队篇：解放军忠于习近平吗？](/articles/voa/1014317.md)
 
 7-6 [台湾两岸事务重要人士郑文灿 市长任内疑涉贪污罪遭调查](/articles/voa/1014318.md)
-
-7-6 [消息人士称哈马斯接受了美国针对以色列人质谈判的提议](/articles/voa/1014319.md)
-
-7-6 [斯塔默上任英国首相后承诺开始“重建英国”](/articles/voa/1014320.md)
 
