--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+7-18 [美众议院两党议员呼吁拜登政府制裁侵犯人权的香港官员](/articles/voa/1014012.md)
+
+7-18 [乌克兰报告说有50万俄军包围乌克兰](/articles/voa/1014013.md)
+
+7-18 [世贸组织：中国对其工业部门的支持缺乏透明度](/articles/voa/1014014.md)
+
+7-18 [活动人士敦促英国政府阻止“希音”在伦敦首次公开募股](/articles/voa/1014015.md)
+
+7-18 [美国担心伊斯兰国在叙利亚和伊拉克复活](/articles/voa/1014016.md)
+
+7-18 [台驻美代表处回应特朗普称台湾应向美支付防务费用言论：台湾有决心承担自卫责任](/articles/voa/1014017.md)
+
 7-18 [香港记协主席: 不理解前雇主指不应在港争取新闻自由 事件不影响记协工作](/articles/voa/1014018.md)
 
 7-18 [卫生官员说，以色列空袭打死九名巴勒斯坦人](/articles/voa/1014019.md)
@@ -588,16 +600,4 @@
 7-7 [官员们说，哈马斯放弃关键要求，为加沙可能停火清除了道路](/articles/voa/1014310.md)
 
 7-7 [达赖喇嘛89寿辰，流亡西藏人担心没有他的未来](/articles/voa/1014311.md)
-
-7-7 [美台智库共议中共法律战 余茂春:台海“国际化”才能有效吓阻中国](/articles/voa/1014312.md)
-
-7-7 [中欧电动车关税之争远未结束，欧盟报告曝光，调查之细出人意外](/articles/voa/1014313.md)
-
-7-6 [中国以大欺小再出新招，海警巨无霸锚泊菲专属经济区](/articles/voa/1014314.md)
-
-7-6 [达赖喇嘛在美国庆祝89岁生日，否认有关他健康不佳谣言](/articles/voa/1014315.md)
-
-7-6 [专访台湾驻美代表俞大㵢:台湾希望稳定安全，争端制造者是中方](/articles/voa/1014316.md)
-
-7-6 [三中全会军队篇：解放军忠于习近平吗？](/articles/voa/1014317.md)
 
