--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-18 [【重温】Matters｜记录、联结与反抗：我所知道的端点星](/articles/cdt/338798.md)
+
+7-18 [【CDTV】歪脑｜Ian Johnson：“星火”挑战中共对历史的解释权](/articles/cdt/338800.md)
+
 7-18 [人间三角｜垃圾信息的狂欢](/articles/cdt/338803.md)
 
 7-18 [星球商业评论｜看起来很刑的人越来越多了](/articles/cdt/338806.md)
@@ -596,8 +600,4 @@
 6-9 [三联生活周刊｜女子两年被家暴16次，想要离婚为何这么难？](/articles/cdt/339818.md)
 
 6-9 [每日一语 2024.6.8](/articles/cdt/339821.md)
-
-6-9 [Matters｜高考是我最恨的日子](/articles/cdt/339823.md)
-
-6-9 [【CDT专访】《剩女时代》作者洪理达：中国有越来越多的年轻女性冒着政治风险挺身而出](/articles/cdt/339826.md)
 
