--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-18 [美国称俄罗斯和中国令太空陷入危险境地](/articles/voa/1014011.md)
+
 7-18 [美众议院两党议员呼吁拜登政府制裁侵犯人权的香港官员](/articles/voa/1014012.md)
 
 7-18 [乌克兰报告说有50万俄军包围乌克兰](/articles/voa/1014013.md)
@@ -598,6 +600,4 @@
 7-7 [少数族裔战斗人员攻入缅甸北方重镇腊戌](/articles/voa/1014309.md)
 
 7-7 [官员们说，哈马斯放弃关键要求，为加沙可能停火清除了道路](/articles/voa/1014310.md)
-
-7-7 [达赖喇嘛89寿辰，流亡西藏人担心没有他的未来](/articles/voa/1014311.md)
 
