--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-18 [在第三天的共和党全国代表大会上，发言者如何谈及中国？](/articles/voa/1014010.md)
+
 7-18 [美国称俄罗斯和中国令太空陷入危险境地](/articles/voa/1014011.md)
 
 7-18 [美众议院两党议员呼吁拜登政府制裁侵犯人权的香港官员](/articles/voa/1014012.md)
@@ -598,6 +600,4 @@
 7-7 [俄罗斯攻击让乌克兰北部几万人断电断水](/articles/voa/1014308.md)
 
 7-7 [少数族裔战斗人员攻入缅甸北方重镇腊戌](/articles/voa/1014309.md)
-
-7-7 [官员们说，哈马斯放弃关键要求，为加沙可能停火清除了道路](/articles/voa/1014310.md)
 
