--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-18 [民主党面临团结危机：拜登能否消弭党内愤怒不满](/articles/nyt/1042567.md)
+
 7-18 [香港记者协会主席被《华尔街日报》解雇](/articles/nyt/1042568.md)
 
 7-18 [特朗普称台湾应向美国支付防务费用](/articles/nyt/1042569.md)
@@ -598,6 +600,4 @@
 4-12 [Ai Pin：把人工智能“别”在身上](/articles/nyt/1042865.md)
 
 4-12 [从橄榄球巨星到“世纪审判”主角：O.J.辛普森的一生](/articles/nyt/1042866.md)
-
-4-12 [美日菲三国深化安全和经济关系，共同抗衡中国](/articles/nyt/1042867.md)
 
