--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-18 [特朗普竞选搭档万斯发表提名演说 誓言捍卫工人阶级利益](/articles/voa/1014007.md)
+
 7-18 [美媒：舒默和佩洛西加大对拜登退选的压力](/articles/voa/1014008.md)
 
 7-18 [拜登确诊新冠后取消内华达州竞选活动](/articles/voa/1014009.md)
@@ -598,6 +600,4 @@
 7-7 [台湾海基会董事长郑文灿疑涉贪请辞 “混团”登陆成未竟之业](/articles/voa/1014305.md)
 
 7-7 [北约75年峰会在即 乌克兰战争、欧洲增加国防支出的挑战及美国可靠性引发担忧](/articles/voa/1014306.md)
-
-7-7 [习近平与卢卡申科会晤后 两国陆军举行联合训练](/articles/voa/1014307.md)
 
