--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-18 [援建基地还是永久驻军？中国在柬埔寨军事存在引争议](/articles/nyt/1042566.md)
+
 7-18 [民主党面临团结危机：拜登能否消弭党内愤怒不满](/articles/nyt/1042567.md)
 
 7-18 [香港记者协会主席被《华尔街日报》解雇](/articles/nyt/1042568.md)
@@ -598,6 +600,4 @@
 4-15 [关于悉尼持刀袭击事件，我们目前所知的](/articles/nyt/1042864.md)
 
 4-12 [Ai Pin：把人工智能“别”在身上](/articles/nyt/1042865.md)
-
-4-12 [从橄榄球巨星到“世纪审判”主角：O.J.辛普森的一生](/articles/nyt/1042866.md)
 
