--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-18 [与俄方进行和平谈判？ 乌克兰民众有意愿](/articles/dw/1024864.md)
+
+7-18 [客座评论：北约中国正式对立，警惕引来三战](/articles/dw/1024865.md)
+
 7-18 [不滿美對台軍售 北京片面暫停中美軍控談判](/articles/dw/1024866.md)
 
 7-17 [冯德莱恩连任欧委会主席没有悬念了吗？](/articles/dw/1024867.md)
@@ -596,8 +600,4 @@
 6-19 [德国经济部长的中国之行任务棘手](/articles/dw/1025162.md)
 
 6-19 [罗曼史画句号 俄罗斯法院判处美国士兵3年零9个月徒刑](/articles/dw/1025163.md)
-
-6-19 [2024欧洲杯 一个巨大的生意](/articles/dw/1025164.md)
-
-6-19 [德国博主假扮吉祥物混入欧洲杯赛场](/articles/dw/1025165.md)
 
