--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-18 [三中全会落幕:中国网民热议秦刚人事案，微博出手降温](/articles/voa/1013999.md)
+
+7-18 [欧中贸易战升级：丹麦荷兰西班牙猪肉遭中国反倾销调查](/articles/voa/1014000.md)
+
+7-18 [欧盟委员会主席冯德莱恩连任成功，“抗中保台”列入她下一任政纲](/articles/voa/1014001.md)
+
 7-18 [越南向联合国提交南中国海外大陆架延伸申请，中国“坚决反对”](/articles/voa/1014002.md)
 
 7-18 [三中全会人事 免去秦刚中央委员职务、确认李尚福等人遭开除党籍](/articles/voa/1014003.md)
@@ -594,10 +600,4 @@
 7-8 [乌克兰无人机袭击导致俄一库房爆炸，俄乌前线消耗战仍在持续](/articles/voa/1014297.md)
 
 7-7 [斯塔默任首相两天后李强才电贺，称中英应加强协调合作](/articles/voa/1014298.md)
-
-7-7 [以哈战争九个月，以全国再爆示威要求停火，公路和政府部长住宅遭封堵](/articles/voa/1014299.md)
-
-7-7 [经济前景悲观 中国人躺平新去处--青年养老院](/articles/voa/1014300.md)
-
-7-7 [三中全会文化篇：赞颂习“文化体制改革”成就意图何在](/articles/voa/1014301.md)
 
