--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-19 [独角鲸工作坊｜反诈再这么一刀切，普通人的银行卡就快成摆设了](/articles/cdt/338771.md)
+
 7-18 [每日一语 2024.7.17](/articles/cdt/338773.md)
 
 7-18 [【网络民议】二十届三中全会公报预告进入“历史的垃圾时间”？](/articles/cdt/338780.md)
@@ -598,6 +600,4 @@
 6-10 [新新默存｜宋石男：论屈原的个人主义](/articles/cdt/339782.md)
 
 6-10 [反面阅读｜越出越删，15种作品的版本变化](/articles/cdt/339785.md)
-
-6-10 [【404帖子】2024年或为最后一届蒙古语高考](/articles/cdt/339791.md)
 
