--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-19 [欧洲领导人在英国举行峰会，呼吁与乌克兰团结在一起](/articles/voa/1013995.md)
+
+7-19 [三中全会公报定调“中国式现代化”，分析:经济改革时代告终](/articles/voa/1013996.md)
+
 7-18 [菲律宾加快南中国海岛屿机场跑道扩建工程](/articles/voa/1013997.md)
 
 7-18 [中国四川自贡购物中心火灾16人丧命，起火原因疑为施工作业违规](/articles/voa/1013998.md)
@@ -596,8 +600,4 @@
 7-8 [匈牙利总理欧尔班抵达北京，与中国主席习近平会谈](/articles/voa/1014293.md)
 
 7-8 [朝中社：朝鲜金与正称韩国演习是挑衅](/articles/voa/1014294.md)
-
-7-8 [印度总理莫迪前往莫斯科 关注俄中关系](/articles/voa/1014295.md)
-
-7-8 [民调显示，法国左派人士在选举中赢得多数席位，缺乏多数会制造动荡](/articles/voa/1014296.md)
 
