--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-19 [【404文库】丰慢慢｜把他赶下台](/articles/cdt/338761.md)
+
+7-19 [【404文库】【立此存照】新华社｜改革家习近平](/articles/cdt/338763.md)
+
+7-19 [每日一语 2024.7.18](/articles/cdt/338765.md)
+
 7-19 [城市的地得｜有一天我们会对何伟说：欢迎回来](/articles/cdt/338769.md)
 
 7-19 [独角鲸工作坊｜反诈再这么一刀切，普通人的银行卡就快成摆设了](/articles/cdt/338771.md)
@@ -594,10 +600,4 @@
 6-10 [【404文库】黑噪音｜中国软件行业，集体遭遇“滑铁卢”](/articles/cdt/339770.md)
 
 6-10 [吐槽青年博士｜“新闻业务”退化的恶果正集中涌现](/articles/cdt/339775.md)
-
-6-10 [唐师三百手｜别被他们说的“躺平”给忽悠了](/articles/cdt/339777.md)
-
-6-10 [工事有料｜职校学生实习的背后：低廉时薪、不被承认、层层压迫的困境](/articles/cdt/339780.md)
-
-6-10 [新新默存｜宋石男：论屈原的个人主义](/articles/cdt/339782.md)
 
