--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,20 @@
 美国之音
 ------
 
+7-19 [法国分裂的国民议会保留了中间派议长](/articles/voa/1013983.md)
+
+7-19 [美国会共和党人称赞“极其聪明” 的特朗普副手万斯曾提案限制中国进入美国资本市场](/articles/voa/1013984.md)
+
+7-19 [“川建国”再上热搜 中国网民热议特朗普回归](/articles/voa/1013985.md)
+
+7-19 [台湾民调：若特朗普赢得总统选举，46%台湾人认为美国在中国攻台时出兵协防台湾可能性减少](/articles/voa/1013986.md)
+
+7-19 [美国民主党重要领导人推动拜登放弃竞选连任](/articles/voa/1013987.md)
+
+7-19 [蒲黄榆说: 三中全会观察之二——逃避和危险](/articles/voa/1013988.md)
+
+7-19 [维吾尔流亡组织藉受奴役民族周呼吁美国承认“东突厥斯坦”独立](/articles/voa/1013989.md)
+
 7-19 [太平洋七月练兵忙: 欧洲大批战机飞抵日本，展开天空24军演](/articles/voa/1013990.md)
 
 7-19 [推特上的中国：中共宣布“秦刚同志”辞去党内职务，前外长安全着陆？](/articles/voa/1013991.md)
@@ -586,18 +600,4 @@
 7-8 [中共在新疆沙漠轰炸美军战机与航母模型 似为与美军冲突做准备](/articles/voa/1014281.md)
 
 7-8 [美澳将致力于改善太平洋地区金融连结 抗衡中国影响力](/articles/voa/1014282.md)
-
-7-8 [中国称菲律宾在南中国海坐滩军舰严重损害珊瑚礁生态系统](/articles/voa/1014283.md)
-
-7-8 [中国乘用车销售六月连续第三个月下滑，同比下降6.9%](/articles/voa/1014284.md)
-
-7-8 [美国主办北约峰会再提中国议程，你需要知道的五个要点](/articles/voa/1014285.md)
-
-7-8 [聿文视界：中共三中全会，戴着镣铐的所谓“改革”](/articles/voa/1014286.md)
-
-7-8 [报道：韩国总统尹锡悦将在北约峰会讨论朝鲜对欧洲的“明显威胁”](/articles/voa/1014287.md)
-
-7-8 [民主党国会议员本周将就是否支持拜登继续竞选作出决定](/articles/voa/1014288.md)
-
-7-8 [波音公司将在美国调查737 MAX致命坠机事故中认罪](/articles/voa/1014289.md)
 
