--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-19 [知情人称拜登似乎已开始接受退选可能性](/articles/nyt/1042564.md)
+
 7-19 [政策、口号与“秦刚同志”之谜：解读中共三中全会公报](/articles/nyt/1042565.md)
 
 7-18 [援建基地还是永久驻军？中国在柬埔寨军事存在引争议](/articles/nyt/1042566.md)
@@ -598,6 +600,4 @@
 4-15 [从“特殊地位”到几近决裂：中印关系考验莫迪](/articles/nyt/1042862.md)
 
 4-15 [中国感到被美国围困，但习近平无力反击](/articles/nyt/1042863.md)
-
-4-15 [关于悉尼持刀袭击事件，我们目前所知的](/articles/nyt/1042864.md)
 
