--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-19 [特朗普发表演说正式接受共和党总统候选人提名](/articles/voa/1013980.md)
+
 7-19 [以色列特拉维夫遭胡赛武装无人机袭击](/articles/voa/1013981.md)
 
 7-19 [韩国对朝鲜重启高音喇叭广播 反制垃圾气球攻势](/articles/voa/1013982.md)
@@ -598,6 +600,4 @@
 7-9 [油罐车既运煤制油又运食用油，中国官媒沉默数天后批中储粮形同投毒](/articles/voa/1014278.md)
 
 7-9 [匈牙利总理欧尔班为何旋风访华?](/articles/voa/1014279.md)
-
-7-9 [北约秘书长：结束俄乌战争最快办法是输掉它，但这不会带来和平](/articles/voa/1014280.md)
 
