--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-19 [美中日之間 太平洋島國還能否「自在游泳」？](/articles/dw/1024851.md)
+
 7-19 [分析：三中全會為習近平第四任期鋪路](/articles/dw/1024852.md)
 
 7-19 [客座評論：Shame on you《華爾街日報》](/articles/dw/1024853.md)
@@ -598,6 +600,4 @@
 6-21 [中美举行禁毒合作高级别会谈](/articles/dw/1025149.md)
 
 6-20 [德外长出席DW全球媒体论坛 警告AI加剧不平等](/articles/dw/1025150.md)
-
-6-20 [谈球员肤色 德国副议长删帖又道歉](/articles/dw/1025151.md)
 
