--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-19 [越南共产党总书记阮富仲去世，享年80岁](/articles/voa/1013976.md)
+
 7-19 [微软系统大范围技术故障扰乱全球航班、银行、媒体机构和企业的运营](/articles/voa/1013977.md)
 
 7-19 [面对民主党人劝退声浪 拜登的连任竞选来到关键时刻](/articles/voa/1013978.md)
@@ -598,6 +600,4 @@
 7-9 [拜登致函国会民主党人，要求“结束”有关他是否应退选的辩论](/articles/voa/1014274.md)
 
 7-9 [美国寻求加强对外国人在军事设施附近购买房地产的审查](/articles/voa/1014275.md)
-
-7-9 [香港特首重心转移拚经济 号召力缺失令民心冷淡](/articles/voa/1014276.md)
 
