--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-19 [三中全会新闻发布会：中国官员承认“经济恢复还不够强劲”](/articles/dw/1024848.md)
+
 7-19 [发“敌意信息”： 新加坡令社交平台屏蔽郭文贵相关帐号](/articles/dw/1024849.md)
 
 7-19 [约会APP正在改变我们寻找爱情](/articles/dw/1024850.md)
@@ -598,6 +600,4 @@
 6-21 [路透：中美舉行核會談 中方稱對台不訴諸核武](/articles/dw/1025146.md)
 
 6-21 [香港反修例運動5週年：出獄少年們為何無悔青春？](/articles/dw/1025147.md)
-
-6-21 [中国华南地区再遇暴雨洪水](/articles/dw/1025148.md)
 
