--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-20 [华尔街日报记者格什科维奇被控“间谍罪”被俄罗斯法院判处16年徒刑](/articles/voa/1013970.md)
+
 7-19 [美国驻瓦努阿图大使馆揭幕，南太平洋美中角力日趋激烈](/articles/voa/1013971.md)
 
 7-19 [台湾外长林佳龙：国防预算八年倍增，台湾已付该付的军费](/articles/voa/1013972.md)
@@ -598,6 +600,4 @@
 7-9 [俄军发动大规模导弹袭击，基辅儿童医院被击中；拜登总统发声明谴责俄罗斯“残暴”](/articles/voa/1014268.md)
 
 7-9 [法国混乱的选举之后，总统马克龙要求总理留任以利“国家稳定”](/articles/voa/1014269.md)
-
-7-9 [太平洋岛国领导人在地区竞争加剧时访问中国](/articles/voa/1014270.md)
 
