--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-20 [鸡蛋bot｜“被指居者”之死：嫌犯身体遭长时间束缚，警方称指居使用械具是惯例](/articles/cdt/338755.md)
+
 7-19 [虞乐仲｜一代人的思想钢印：仇恨“敌对势力”的70后](/articles/cdt/338759.md)
 
 7-19 [【404文库】丰慢慢｜把他赶下台](/articles/cdt/338761.md)
@@ -598,6 +600,4 @@
 6-11 [每日一语 2024.6.10](/articles/cdt/339762.md)
 
 6-10 [水瓶纪元｜蓬蒿剧场创始人王翔败诉：当公众人物被指控性骚扰](/articles/cdt/339766.md)
-
-6-10 [【404文库】黑噪音｜中国软件行业，集体遭遇“滑铁卢”](/articles/cdt/339770.md)
 
