--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-20 [失业激增导致中国极端事件频发 蓝领、白领、金领齐受害](/articles/voa/1013965.md)
+
+7-20 [如果拜登退出总统竞选会发生什么？](/articles/voa/1013966.md)
+
+7-20 [香港政治犯小牢转大牢 狱后继续饱受精神压力](/articles/voa/1013967.md)
+
+7-20 [西方专家解读中共三中全会：公报平淡无奇 改革方向已变](/articles/voa/1013968.md)
+
 7-20 [中共三中全会后再信心喊话 分析: 改革宣言与现实充满矛盾](/articles/voa/1013969.md)
 
 7-20 [华尔街日报记者格什科维奇被控“间谍罪”被俄罗斯法院判处16年徒刑](/articles/voa/1013970.md)
@@ -592,12 +600,4 @@
 7-9 [“对抗以中国为首的轴心” 美国会众议院议长：将推动全面抗中法案](/articles/voa/1014263.md)
 
 7-9 [美国不预计伊朗在新总统领导下会改变政策](/articles/voa/1014264.md)
-
-7-9 [乌克兰战争持续之际，中国和白俄罗斯开始联合反恐演习](/articles/voa/1014265.md)
-
-7-9 [拜登将于周三在白宫会晤英国新首相斯塔默](/articles/voa/1014266.md)
-
-7-9 [伊朗当选总统重申对以色列的政策](/articles/voa/1014267.md)
-
-7-9 [俄军发动大规模导弹袭击，基辅儿童医院被击中；拜登总统发声明谴责俄罗斯“残暴”](/articles/voa/1014268.md)
 
