--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-20 [布林肯将于下周会见王毅，试图澄清南中国海和台湾议题上的分歧](/articles/voa/1013963.md)
+
 7-20 [一些年长的美国工作者对要求拜登下台的呼声感到愤怒](/articles/voa/1013964.md)
 
 7-20 [失业激增导致中国极端事件频发 蓝领、白领、金领齐受害](/articles/voa/1013965.md)
@@ -598,6 +600,4 @@
 7-9 [澳大利亚警告称中国政府支持的黑客构成“持续威胁”](/articles/voa/1014261.md)
 
 7-9 [北约盟国在拜登政治前途未卜的阴云下举行峰会](/articles/voa/1014262.md)
-
-7-9 [“对抗以中国为首的轴心” 美国会众议院议长：将推动全面抗中法案](/articles/voa/1014263.md)
 
