--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-20 [可能取代拜登竞选总统的民主党人](/articles/voa/1013960.md)
+
+7-20 [回应特朗普称台湾应支付防卫费用 美共和党人：行动比言辞更重要](/articles/voa/1013961.md)
+
+7-20 [民主党担心选民对拜登的疑虑会导致国会选举失利](/articles/voa/1013962.md)
+
 7-20 [布林肯将于下周会见王毅，试图澄清南中国海和台湾议题上的分歧](/articles/voa/1013963.md)
 
 7-20 [一些年长的美国工作者对要求拜登下台的呼声感到愤怒](/articles/voa/1013964.md)
@@ -594,10 +600,4 @@
 7-9 [国际社会谴责俄罗斯袭击乌克兰之际莫迪将与普京会谈](/articles/voa/1014258.md)
 
 7-9 [澳大利亚承诺向太平洋岛国银行业提供更多资金以抗衡中国影响力](/articles/voa/1014259.md)
-
-7-9 [拜登获得部分关键民主党议员支持并坚称不退选](/articles/voa/1014260.md)
-
-7-9 [澳大利亚警告称中国政府支持的黑客构成“持续威胁”](/articles/voa/1014261.md)
-
-7-9 [北约盟国在拜登政治前途未卜的阴云下举行峰会](/articles/voa/1014262.md)
 
