--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-20 [日本政府证实和台湾海巡船联合演习 中国向日方提出交涉](/articles/voa/1013956.md)
+
+7-20 [中国与加拿大外长会面 王毅：中加应致力于发展战略伙伴关系](/articles/voa/1013957.md)
+
 7-20 [抗议扩大 孟加拉国实施宵禁并部署军队](/articles/voa/1013958.md)
 
 7-20 [特朗普表示与乌克兰总统进行了“非常好的通话”并承诺结束战争](/articles/voa/1013959.md)
@@ -596,8 +600,4 @@
 7-9 [岸田文雄：日本必须强化与北约关系以确保全球和平](/articles/voa/1014254.md)
 
 7-9 [AI需求旺盛，台湾6月出口优于预期，对美增幅高达74.2%](/articles/voa/1014255.md)
-
-7-9 [台湾年度汉光演习前 赖清德表示军事上以少胜多案例比比皆是](/articles/voa/1014256.md)
-
-7-9 [为抗衡中国北约与亚太伙伴在美国领导下加强合作](/articles/voa/1014257.md)
 
