--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-20 [维舟｜地火在地下运行](/articles/cdt/338733.md)
+
+7-20 [CityMark城市寻踪探秘｜怎么今年雨下到哪里，事就出到哪里，陕西高速突发桥梁垮塌](/articles/cdt/338735.md)
+
+7-20 [【网络民议】官媒：中国出征巴黎奥运会；民众：“如果能拿100块金牌，能不能把我的电瓶车还给我，我还要跑外卖”](/articles/cdt/338746.md)
+
 7-20 [每日一语 2024.7.19](/articles/cdt/338751.md)
 
 7-20 [鸡蛋bot｜“被指居者”之死：嫌犯身体遭长时间束缚，警方称指居使用械具是惯例](/articles/cdt/338755.md)
@@ -594,10 +600,4 @@
 6-11 [环球疯人院｜福布斯：中国的中产阶级正在消失](/articles/cdt/339745.md)
 
 6-11 [匿名网友｜返乡杂谈偶感：人们生活在抖音创造的世界里](/articles/cdt/339749.md)
-
-6-11 [麟阁经略｜在吉林被捅的四名外国人，是对华友好人士](/articles/cdt/339755.md)
-
-6-11 [维舟｜谁都想查禁自己不喜欢的东西](/articles/cdt/339758.md)
-
-6-11 [每日一语 2024.6.10](/articles/cdt/339762.md)
 
