--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-20 [菲律宾将购买更多战斗机，正加强飞行员培训](/articles/voa/1013954.md)
+
 7-20 [中国陕西暴雨导致高速桥梁坍塌 已酿12死](/articles/voa/1013955.md)
 
 7-20 [日本政府证实和台湾海巡船联合演习 中国向日方提出交涉](/articles/voa/1013956.md)
@@ -598,6 +600,4 @@
 7-9 [台湾汉光40号军演在即 验证新“交战规则”](/articles/voa/1014252.md)
 
 7-9 [乌全国哀悼俄军导弹袭击罹难者，乌各方为重建遇袭儿童医院捐款](/articles/voa/1014253.md)
-
-7-9 [岸田文雄：日本必须强化与北约关系以确保全球和平](/articles/voa/1014254.md)
 
