--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-20 [阿罗汉有约｜坚定不移](/articles/cdt/338729.md)
+
+7-20 [城市的地得｜商洛垮桥：骄傲之余需要漫长的耐心](/articles/cdt/338731.md)
+
 7-20 [维舟｜地火在地下运行](/articles/cdt/338733.md)
 
 7-20 [CityMark城市寻踪探秘｜怎么今年雨下到哪里，事就出到哪里，陕西高速突发桥梁垮塌](/articles/cdt/338735.md)
@@ -596,8 +600,4 @@
 6-11 [XCiOS俱乐部｜iOS18 即将推送，核心 Ai 功能国内可能被禁止使用](/articles/cdt/339741.md)
 
 6-11 [无声无光｜四名美国人被刺伤后](/articles/cdt/339743.md)
-
-6-11 [环球疯人院｜福布斯：中国的中产阶级正在消失](/articles/cdt/339745.md)
-
-6-11 [匿名网友｜返乡杂谈偶感：人们生活在抖音创造的世界里](/articles/cdt/339749.md)
 
