--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-20 [建设性意见｜日本首相给当年“计划生育”的受害者鞠躬道歉，并国家赔偿](/articles/cdt/338726.md)
+
 7-20 [阿罗汉有约｜坚定不移](/articles/cdt/338729.md)
 
 7-20 [城市的地得｜商洛垮桥：骄傲之余需要漫长的耐心](/articles/cdt/338731.md)
@@ -598,6 +600,4 @@
 6-11 [周泽｜按政府要求签了个名，北京一拆迁户被判无期徒刑](/articles/cdt/339739.md)
 
 6-11 [XCiOS俱乐部｜iOS18 即将推送，核心 Ai 功能国内可能被禁止使用](/articles/cdt/339741.md)
-
-6-11 [无声无光｜四名美国人被刺伤后](/articles/cdt/339743.md)
 
