--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-20 [战局艰难，白宫易主机率增加，强人泽连斯基对俄谈判立场似有松动](/articles/voa/1013951.md)
+
 7-20 [中俄海上联合巡航首次来到南中国海 俄被迫蹚浑水？](/articles/voa/1013952.md)
 
 7-20 [三中全会后中共的两岸政策走向 专家: 加强倡导对台主权](/articles/voa/1013953.md)
@@ -598,6 +600,4 @@
 7-10 [靖国神社撒尿涂鸦事件参与者姜卓君在日本被捕，另外两人遭通缉](/articles/voa/1014249.md)
 
 7-10 [莫迪访俄遭泽连斯基抨击后当面告诉普京儿童被杀令人心痛](/articles/voa/1014250.md)
-
-7-10 [北约75年历程: 从冷战堡垒到全球安全力量](/articles/voa/1014251.md)
 
