--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-20 [沙利文：美国支持菲律宾为坐滩军舰运送补给，两国高级将领密切互动](/articles/voa/1013948.md)
+
 7-20 [报复还是姿态？俄罗斯宣布大幅上调“不友好国家”的产品进口关税](/articles/voa/1013949.md)
 
 7-20 [专访胡佛历史学者林孝庭：蒋经国日记与美中苏冷战秘辛](/articles/voa/1013950.md)
@@ -598,6 +600,4 @@
 7-10 [中国陆军首次进入欧洲腹地，搅局俄乌战争还是威慑北约?](/articles/voa/1014246.md)
 
 7-10 [菲律宾反驳北京指责，说中国大举填海造岛对珊瑚礁造成严重破坏](/articles/voa/1014247.md)
-
-7-10 [多地调整城管编制 惠及小摊贩为三中全会造势？](/articles/voa/1014248.md)
 
