--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-21 [以军打击也门胡塞武装的几个目标，回应攻击](/articles/voa/1013946.md)
+
 7-21 [加拿大调查“中共海外警察局”大有斩获，民众吁当局依新法惩治跨国镇压](/articles/voa/1013947.md)
 
 7-20 [沙利文：美国支持菲律宾为坐滩军舰运送补给，两国高级将领密切互动](/articles/voa/1013948.md)
@@ -598,6 +600,4 @@
 7-10 [俄袭击儿童医院后，泽连斯基告诉VOA: 将呼吁北约领导人更加有力和果断地支援乌克兰](/articles/voa/1014244.md)
 
 7-10 [瑞典要求北约更专注中国以赢得美国支持](/articles/voa/1014245.md)
-
-7-10 [中国陆军首次进入欧洲腹地，搅局俄乌战争还是威慑北约?](/articles/voa/1014246.md)
 
