--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-21 [凤凰网｜3个月20次洪水，中国陷入“救灾疲惫”时刻](/articles/cdt/338720.md)
+
 7-20 [中国新闻周刊｜突发山洪造成30余人失联，雅安汉源怎么样了？](/articles/cdt/338724.md)
 
 7-20 [建设性意见｜日本首相给当年“计划生育”的受害者鞠躬道歉，并国家赔偿](/articles/cdt/338726.md)
@@ -598,6 +600,4 @@
 6-12 [【网络民议】在最安全的国家里走路碰撞易被捅](/articles/cdt/339735.md)
 
 6-11 [每日一语 2024.6.11](/articles/cdt/339737.md)
-
-6-11 [周泽｜按政府要求签了个名，北京一拆迁户被判无期徒刑](/articles/cdt/339739.md)
 
