--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-21 [法轮功团体全球多地举行反(中共)迫害25周年集会，美国务院发声支持人权](/articles/voa/1013943.md)
+
 7-21 [中情局前分析师被控充当韩国秘密特工的影响](/articles/voa/1013944.md)
 
 7-21 [乌克兰前议员在疑似刺杀中被打死 俄罗斯空袭打死两人](/articles/voa/1013945.md)
@@ -598,6 +600,4 @@
 7-10 [北约讨论抗击虚假信息之际 中国指控美国及其盟友制造虚假信息](/articles/voa/1014241.md)
 
 7-10 [真主党说，以色列攻击叙利亚打死该组织领导人的前保镖](/articles/voa/1014242.md)
-
-7-10 [美联储主席鲍威尔：美国在抗击通胀方面取得“适度”进展](/articles/voa/1014243.md)
 
