--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-21 [韩国启动每日高音广播后 朝鲜再次空飘垃圾气球](/articles/voa/1013940.md)
+
 7-21 [中国兴奋剂丑闻阴影不散 西方泳将敦促建立公平竞争环境](/articles/voa/1013941.md)
 
 7-21 [特朗普遇刺后首场竞选造势赞扬多名独裁者 并称习近平慰问信“文情并茂”](/articles/voa/1013942.md)
@@ -598,6 +600,4 @@
 7-10 [耶伦担心中俄等受美国制裁的国家寻求去美元化](/articles/voa/1014238.md)
 
 7-10 [英国工党政府将如何调整对华政策？](/articles/voa/1014239.md)
-
-7-10 [美国将铝、聚氯乙烯和海鲜列为《防止强迫维吾尔人劳动法》执法新重点](/articles/voa/1014240.md)
 
