--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-21 [中国官员参与“金厦泳渡”开幕后快闪 与台湾官员“巧妙错开”未打照面](/articles/voa/1013937.md)
+
+7-21 [孟加拉国最高法院取消了引发致命抗议的大部分公职配额](/articles/voa/1013938.md)
+
 7-21 [美国空军部长称将“认真审视”战斗机项目 以制衡中国](/articles/voa/1013939.md)
 
 7-21 [韩国启动每日高音广播后 朝鲜再次空飘垃圾气球](/articles/voa/1013940.md)
@@ -596,8 +600,4 @@
 7-10 [美国要求加拿大兑现关于国防开支的北约承诺](/articles/voa/1014235.md)
 
 7-10 [世界反兴奋剂机构任命的独立调查官称该机构没有“偏袒”药检呈阳性的中国游泳运动员](/articles/voa/1014236.md)
-
-7-10 [共和党公布得到特朗普支持的2024年政纲](/articles/voa/1014237.md)
-
-7-10 [耶伦担心中俄等受美国制裁的国家寻求去美元化](/articles/voa/1014238.md)
 
