--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-21 [冯德莱恩第二任期的中国政策](/articles/dw/1024835.md)
+
 7-21 [德国公民被白俄罗斯判死刑 外交部门正谈判](/articles/dw/1024836.md)
 
 7-21 [70岁生日之际  默克尔政绩毁誉并存](/articles/dw/1024837.md)
@@ -598,6 +600,4 @@
 6-22 [合作研究伽马暴 中法天文卫星升空](/articles/dw/1025133.md)
 
 6-22 [加沙卫生部：拉法附近难民营遇袭，25人丧生](/articles/dw/1025134.md)
-
-6-22 [普京访朝 金正恩红毯高规格亲自迎接](/articles/dw/1025135.md)
 
