--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-21 [中国与菲律宾就南中国海坐滩军舰补给达成“临时安排”协议](/articles/voa/1013934.md)
+
+7-21 [青海仅存藏语学校难逃劫数，藏语文前景堪忧](/articles/voa/1013935.md)
+
+7-21 [国际会计师行中国大裁员 金融国企驻港雇员传遭追讨奖金](/articles/voa/1013936.md)
+
 7-21 [中国官员参与“金厦泳渡”开幕后快闪 与台湾官员“巧妙错开”未打照面](/articles/voa/1013937.md)
 
 7-21 [孟加拉国最高法院取消了引发致命抗议的大部分公职配额](/articles/voa/1013938.md)
@@ -594,10 +600,4 @@
 7-10 [美国选民就经济问题在拜登和特朗普之间做选择](/articles/voa/1014232.md)
 
 7-10 [美参院军委会提交《2025财年国防授权法》，要求落实为台湾建立地区应变军事储备](/articles/voa/1014233.md)
-
-7-10 [拜登：乌克兰将再获得五套防空系统](/articles/voa/1014234.md)
-
-7-10 [美国要求加拿大兑现关于国防开支的北约承诺](/articles/voa/1014235.md)
-
-7-10 [世界反兴奋剂机构任命的独立调查官称该机构没有“偏袒”药检呈阳性的中国游泳运动员](/articles/voa/1014236.md)
 
