--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-21 [德国外长：部署美国远程武器确有必要](/articles/dw/1024834.md)
+
 7-21 [冯德莱恩第二任期的中国政策](/articles/dw/1024835.md)
 
 7-21 [德国公民被白俄罗斯判死刑 外交部门正谈判](/articles/dw/1024836.md)
@@ -598,6 +600,4 @@
 6-22 [哈贝克：欧盟对中国关税谈判持开放态度](/articles/dw/1025132.md)
 
 6-22 [合作研究伽马暴 中法天文卫星升空](/articles/dw/1025133.md)
-
-6-22 [加沙卫生部：拉法附近难民营遇袭，25人丧生](/articles/dw/1025134.md)
 
