--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [巴基斯坦将要求在其境内中资发电厂换用巴本土煤炭发电](/articles/voa/1013932.md)
+
 7-21 [赖清德：台湾必须捍卫自己主权，了解自己的文化和历史](/articles/voa/1013933.md)
 
 7-21 [中国与菲律宾就南中国海坐滩军舰补给达成“临时安排”协议](/articles/voa/1013934.md)
@@ -598,6 +600,4 @@
 7-10 [“每一次纪念709，都是对他们（中共政权）的一次警告”](/articles/voa/1014230.md)
 
 7-10 [盼加强印太合作,美国会外交领袖：北约可以阻止第三次世界大战](/articles/voa/1014231.md)
-
-7-10 [美国选民就经济问题在拜登和特朗普之间做选择](/articles/voa/1014232.md)
 
