--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
+
+7-22 [北青深一度｜陕西高速桥垮塌获救者：和工友返乡途中，只有他打开了车窗](/articles/cdt/338705.md)
+
 7-21 [爱写写的二娃妈｜李医生的死，不会改变什么](/articles/cdt/338715.md)
 
 7-21 [南方周末｜多名被“指居”者死亡，背后的制度陷存废之争](/articles/cdt/338718.md)
@@ -596,8 +600,4 @@
 6-12 [四环青年｜儿慈会千万善款被卷走，钱的去向查清了吗](/articles/cdt/339710.md)
 
 6-12 [南方周末｜状告那个网暴者：公安局发言人侮辱遇害者家属被判道歉](/articles/cdt/339712.md)
-
-6-12 [林中的维吉尔｜那个自以为很“爱国”的日本行凶者](/articles/cdt/339715.md)
-
-6-12 [关尔东｜义和团的“爱”，我承受不起](/articles/cdt/339717.md)
 
