--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-22 [莽莽｜失语中国：被噤声的公共知识分子们](/articles/cdt/338701.md)
+
 7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
 
 7-22 [北青深一度｜陕西高速桥垮塌获救者：和工友返乡途中，只有他打开了车窗](/articles/cdt/338705.md)
@@ -598,6 +600,4 @@
 6-12 [【404文库】唐师三百手｜下一款iphone，我们与世界从此分道扬镳](/articles/cdt/339706.md)
 
 6-12 [四环青年｜儿慈会千万善款被卷走，钱的去向查清了吗](/articles/cdt/339710.md)
-
-6-12 [南方周末｜状告那个网暴者：公安局发言人侮辱遇害者家属被判道歉](/articles/cdt/339712.md)
 
