--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [拜登将在2024年大选中退出 接下来会发生什么？](/articles/voa/1013928.md)
+
 7-22 [拜登总统退出2024年竞选 支持提名哈里斯](/articles/voa/1013929.md)
 
 7-22 [美国总统拜登将退出总统连任的竞选](/articles/voa/1013930.md)
@@ -598,6 +600,4 @@
 7-10 [中国需求疲软，6月份消费者通胀率不及预期](/articles/voa/1014226.md)
 
 7-10 [台军方称解放军航母经菲律宾北部巴林塘海峡前往西太平洋演训](/articles/voa/1014227.md)
-
-7-10 [拜登赢得资深民主党议员支持，但疑虑仍然存在](/articles/voa/1014228.md)
 
