--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-22 [拜登总统退出竞选 美国会共和党人要求他立刻辞职 民主党人称他是“最具影响力领袖之一”](/articles/voa/1013926.md)
+
+7-22 [外国领导人对拜登退出总统竞选作出反应](/articles/voa/1013927.md)
+
 7-22 [拜登将在2024年大选中退出 接下来会发生什么？](/articles/voa/1013928.md)
 
 7-22 [拜登总统退出2024年竞选 支持提名哈里斯](/articles/voa/1013929.md)
@@ -596,8 +600,4 @@
 7-10 [中国加大军事威胁之际，AIT新处长承诺协助台湾自卫](/articles/voa/1014224.md)
 
 7-10 [在忧虑加剧之际北约领导人寻求加大对乌克兰的支持](/articles/voa/1014225.md)
-
-7-10 [中国需求疲软，6月份消费者通胀率不及预期](/articles/voa/1014226.md)
-
-7-10 [台军方称解放军航母经菲律宾北部巴林塘海峡前往西太平洋演训](/articles/voa/1014227.md)
 
