--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-22 [每日一语 2021.7.21](/articles/cdt/338699.md)
+
 7-22 [莽莽｜失语中国：被噤声的公共知识分子们](/articles/cdt/338701.md)
 
 7-22 [刑辩昊宸｜我从未见过一次正常的指居](/articles/cdt/338703.md)
@@ -598,6 +600,4 @@
 6-12 [极目新闻｜吉林银行回应“取款需派出所同意”：系防范电诈](/articles/cdt/339701.md)
 
 6-12 [剥洋葱people｜两年被家暴16次后，她终于走进了离婚法庭](/articles/cdt/339703.md)
-
-6-12 [【404文库】唐师三百手｜下一款iphone，我们与世界从此分道扬镳](/articles/cdt/339706.md)
 
