--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-22 [拜登的退选给战争、贸易争端和其他外交政策挑战带来了不确定性](/articles/voa/1013917.md)
+
+7-22 [美国副总统卡玛拉·哈里斯小档案—一位打破玻璃天花板的民主党人](/articles/voa/1013918.md)
+
 7-22 [中国央行意外下调关键政策利率以提振经济](/articles/voa/1013919.md)
 
 7-22 [美国华人选民回应拜登退选 副手选择将是关键](/articles/voa/1013920.md)
@@ -596,8 +600,4 @@
 7-11 [印度加快边境水电站建设，北京：印度无权在藏南开发](/articles/voa/1014215.md)
 
 7-11 [众议院外委会举行听证会，重点关注美国国际广播机构的政策、预算和人事问题](/articles/voa/1014216.md)
-
-7-10 [菲空军抵澳参加多国军演，澳准将：做好应对最坏情况的准备](/articles/voa/1014217.md)
-
-7-10 [泽连斯基重返国会山拜会两党议员，感谢美对乌支援](/articles/voa/1014218.md)
 
