--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [与中国就南中国海补给达成协议后 菲律宾重申“继续维护我们的权利”](/articles/voa/1013916.md)
+
 7-22 [拜登的退选给战争、贸易争端和其他外交政策挑战带来了不确定性](/articles/voa/1013917.md)
 
 7-22 [美国副总统卡玛拉·哈里斯小档案—一位打破玻璃天花板的民主党人](/articles/voa/1013918.md)
@@ -598,6 +600,4 @@
 7-11 [太平洋变练兵场: 中俄和美日等国同时军演，航母和隐形军舰一齐现身](/articles/voa/1014214.md)
 
 7-11 [印度加快边境水电站建设，北京：印度无权在藏南开发](/articles/voa/1014215.md)
-
-7-11 [众议院外委会举行听证会，重点关注美国国际广播机构的政策、预算和人事问题](/articles/voa/1014216.md)
 
