--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-22 [德语媒体：世界最强大统治者的软肋](/articles/dw/1024829.md)
+
 7-22 [除了賀錦麗 民主黨還有誰可能迎戰川普？](/articles/dw/1024830.md)
 
 7-22 [拜登退選力推賀錦麗出戰 各界怎麼看？](/articles/dw/1024831.md)
@@ -598,6 +600,4 @@
 6-23 [六次征战欧洲杯 C罗再创记录](/articles/dw/1025127.md)
 
 6-23 [中国海警船同菲律宾补给船在南海发生冲撞](/articles/dw/1025128.md)
-
-6-22 [华人导演张嘉玲获2024年德国纪录片奖](/articles/dw/1025129.md)
 
