--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [内塔尼亚胡将访美,称无论谁当选总统以色列都将是美国的强大盟友](/articles/voa/1013913.md)
+
 7-22 [台湾展开年度军演 旨在尽可能模拟实战](/articles/voa/1013914.md)
 
 7-22 [美国国土安全部长任命独立小组以审查特朗普暗杀未遂事件](/articles/voa/1013915.md)
@@ -598,6 +600,4 @@
 7-11 [以色列军方在加沙城发布疏散令](/articles/voa/1014211.md)
 
 7-11 [路透社：德国将在2029年前将中国技术和零部件从其5G网络中移除](/articles/voa/1014212.md)
-
-7-11 [中国汽车出口激增，部分抵消了国内销量的下滑](/articles/voa/1014213.md)
 
