--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [聿文视界：三中全会，虚张声势的“改革”](/articles/voa/1013912.md)
+
 7-22 [内塔尼亚胡将访美,称无论谁当选总统以色列都将是美国的强大盟友](/articles/voa/1013913.md)
 
 7-22 [台湾展开年度军演 旨在尽可能模拟实战](/articles/voa/1013914.md)
@@ -598,6 +600,4 @@
 7-11 [岸田文雄决心加强与北约的合作，向中国释放什么信号？](/articles/voa/1014210.md)
 
 7-11 [以色列军方在加沙城发布疏散令](/articles/voa/1014211.md)
-
-7-11 [路透社：德国将在2029年前将中国技术和零部件从其5G网络中移除](/articles/voa/1014212.md)
 
