--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-22 [建设性意见｜人们期待的是1978的大刀阔斧](/articles/cdt/338673.md)
+
 7-22 [南方人物周刊｜一名公认的好医生，在午休时间加班时被杀](/articles/cdt/338682.md)
 
 7-22 [【404文库】SoarNewSMTH｜陕西S30水阳高速严坪村2号大桥垮塌过程推测](/articles/cdt/338696.md)
@@ -598,6 +600,4 @@
 6-13 [六神磊磊读金庸｜端午快乐：一个被营销号涂改掉了的全民记忆](/articles/cdt/339693.md)
 
 6-14 [【404文库】“新科技向用户敞开大门，我们却与世界从此分道扬镳”（外二篇）](/articles/cdt/339696.md)
-
-6-12 [古村之友｜汤敏：中华儿慈会犯罪事件彻底宣告了现行社会组织制度的全面破产](/articles/cdt/339699.md)
 
