--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-22 [三大难题，三中全会人口政策难奏效](/articles/voa/1013910.md)
+
 7-22 [菲律宾总统马科斯：菲律宾在领土争议中“不能退让”](/articles/voa/1013911.md)
 
 7-22 [聿文视界：三中全会，虚张声势的“改革”](/articles/voa/1013912.md)
@@ -598,6 +600,4 @@
 7-11 [中国的垃圾填埋场堆满纺织废料：快时尚盛行而回收再利用无人问津](/articles/voa/1014208.md)
 
 7-11 [拜登与特朗普均支持对华增加关税，美中贸易的未来何去何从?](/articles/voa/1014209.md)
-
-7-11 [岸田文雄决心加强与北约的合作，向中国释放什么信号？](/articles/voa/1014210.md)
 
