--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-23 [美副总统哈里斯迅速为党内提名固票，特朗普质疑民主党是否有权临阵换将](/articles/voa/1013905.md)
+
 7-23 [乌中关系有突破：北京自俄乌战争以来首次邀请乌外长库列巴访华，寻求结束战争的办法](/articles/voa/1013906.md)
 
 7-22 [路透独家：非法流入俄罗斯的芯片减缓，但中港仍是转运中心](/articles/voa/1013907.md)
@@ -598,6 +600,4 @@
 7-11 [美官员：可能需要采取“更有创造性的”手段来应对中国的产能过剩](/articles/voa/1014203.md)
 
 7-11 [VOA专访瑞典外相：谈乌克兰加入北约的可能性及瑞典对乌克兰的支持](/articles/voa/1014204.md)
-
-7-11 [美国加强太平洋空中力量的计划被视为旨在制衡中国](/articles/voa/1014205.md)
 
