--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-23 [台灣漢光演習標榜「無劇本」 看點有哪些？](/articles/dw/1024816.md)
+
 7-22 [中国推出按“自愿、弹性”原则延迟退休年龄](/articles/dw/1024817.md)
 
 7-22 [国际法院裁决后 德外长敦促以色列严肃对待](/articles/dw/1024818.md)
@@ -598,6 +600,4 @@
 6-24 [沙特：逾千名麦加朝圣者因高温死亡](/articles/dw/1025114.md)
 
 6-24 [賴清德指「國會改革法案」恐違憲 將聲請釋憲](/articles/dw/1025115.md)
-
-6-23 [日媒：欧盟寻求与日韩建立防务伙伴关系](/articles/dw/1025116.md)
 
