--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-23 [中国为何对哈萨克斯坦充满兴趣](/articles/nyt/1042554.md)
+
 7-23 [从年龄、个性到政策，哈里斯该如何与特朗普展开对决](/articles/nyt/1042555.md)
 
 7-23 [全球多重对抗并存，民主党候选人如何捍卫拜登的外交政绩](/articles/nyt/1042556.md)
@@ -598,6 +600,4 @@
 4-18 [拜登呼吁大幅提高对中国钢铁和铝产品关税](/articles/nyt/1042852.md)
 
 4-17 [AI巨头G42获微软15亿美元投资，将弃用华为设备](/articles/nyt/1042853.md)
-
-4-17 [没有核协议和“统一战线“，美国还能遏制伊朗吗](/articles/nyt/1042854.md)
 
