--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-23 [受台风影响 台湾汉光军演取消部分海空课目](/articles/voa/1013881.md)
+
+7-23 [巴勒斯坦各派在中国会谈后同意结束分歧，组建民族团结政府](/articles/voa/1013882.md)
+
+7-23 [美官员称：拜登星期四将在白宫会见内塔尼亚胡](/articles/voa/1013883.md)
+
 7-23 [美联社：哈里斯获得足够党代表支持成为民主党总统候选人](/articles/voa/1013884.md)
 
 7-23 [美日将举行2+2安全会谈讨论核威慑问题](/articles/voa/1013885.md)
@@ -594,10 +600,4 @@
 7-12 [联合国：阿富汗塔利班增加了对反巴基斯坦恐怖分子的支持](/articles/voa/1014179.md)
 
 7-12 [推特上的中国：北约指中国是俄乌战争的“决定性助推者”中国“骑墙”企图失败？](/articles/voa/1014180.md)
-
-7-12 [美加芬三国宣布联合建造破冰船队在极地对抗中俄](/articles/voa/1014181.md)
-
-7-12 [加拿大按北约指标增加军费支出 对抗中国俄罗斯](/articles/voa/1014182.md)
-
-7-12 [香港特首李家超上任两年经济表现疲弱 学者分析制度转变失国际竞争力](/articles/voa/1014183.md)
 
