--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-23 [【404文库】川江物语｜前外交部长秦刚二三事](/articles/cdt/338634.md)
+
+7-23 [龙眠草堂｜由28勇士说苏联新闻造假](/articles/cdt/338637.md)
+
 7-23 [每日一语 2024.7.22](/articles/cdt/338645.md)
 
 7-23 [【CDTV】中国人民大学女博士生实名公开举报其导师王贵元性骚扰](/articles/cdt/338647.md)
@@ -596,8 +600,4 @@
 6-15 [【重温】全媒派｜发声本身就是一种力量：专访《中国女记者性骚扰调查》发起者黄雪琴](/articles/cdt/339663.md)
 
 6-15 [每日一语 2024.6.13](/articles/cdt/339665.md)
-
-6-15 [建设性意见｜准备去广州地铁投个广告，普及点没人敢说的基本常识](/articles/cdt/339667.md)
-
-6-14 [【CDT报告汇】专家：越战、伊战和对华政策是二战后美国外交的三大失败（外二篇）](/articles/cdt/339676.md)
 
