--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-23 [库列巴外长：同北京直接对话非常重要](/articles/dw/1024810.md)
+
+7-23 [德语媒体：中国的产业优势并不靠补贴](/articles/dw/1024811.md)
+
 7-23 [巴勒斯坦各派签署《北京宣言》以色列抨击法塔赫](/articles/dw/1024812.md)
 
 7-23 [最新调查：德系电动车完胜中国品牌](/articles/dw/1024813.md)
@@ -596,8 +600,4 @@
 6-24 [专访：关税会来的 哈贝克无法解决根本问题](/articles/dw/1025108.md)
 
 6-24 [德国车商：卖不动的电动汽车](/articles/dw/1025109.md)
-
-6-24 [欧盟最高层四大要职本周尘埃落定 冯德莱恩连任应无悬念](/articles/dw/1025110.md)
-
-6-24 [谈判前景不乐观 中欧贸易战一触即发？](/articles/dw/1025111.md)
 
