--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-23 [回应美国关切，克里姆林宫称俄中北极合作不针对任何其他国家](/articles/voa/1013877.md)
+
 7-23 [报告：香港成国际回避制裁中心 协助俄伊朝 呼吁制裁中港银行](/articles/voa/1013878.md)
 
 7-23 [巴黎奥运会即将开幕，美国有望蝉联奖牌榜首位 中国或将争夺最多金牌](/articles/voa/1013879.md)
@@ -598,6 +600,4 @@
 7-12 [台湾外长：正规划赖清德总统出访友邦，是否过境美国评估中](/articles/voa/1014175.md)
 
 7-12 [2023年被伊朗扣押的油轮驶入国际水域](/articles/voa/1014176.md)
-
-7-12 [国际法庭就中菲南中国海争议做出裁决八年后 菲律宾会再次把中国告上法庭吗？](/articles/voa/1014177.md)
 
