--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-23 [专家学者公开声讨 指定居所监视居住会否全面废止？](/articles/voa/1013875.md)
+
 7-23 [匈牙利总理奥尔班众叛亲离，欧盟取消其主持欧盟会议的权利](/articles/voa/1013876.md)
 
 7-23 [回应美国关切，克里姆林宫称俄中北极合作不针对任何其他国家](/articles/voa/1013877.md)
@@ -598,6 +600,4 @@
 7-12 [世卫组织：禽流感风险评估因监测有限而受阻](/articles/voa/1014173.md)
 
 7-12 [哈里斯寻求帮助拜登赢得第二个白宫任期](/articles/voa/1014174.md)
-
-7-12 [台湾外长：正规划赖清德总统出访友邦，是否过境美国评估中](/articles/voa/1014175.md)
 
