--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -23,6 +23,8 @@
 
 7-22 [星球商业评论｜巴黎的猪猪躲过一劫](/articles/cdt/338667.md)
 
+7-23 [【网络民议】“生我时嫌我多，我生时嫌我少，找工作嫌我老，等退休嫌我小”](/articles/cdt/338668.md)
+
 7-22 [【404文库】艾大荀｜举报性骚扰只能靠网络，是社会系统的失能](/articles/cdt/338671.md)
 
 7-22 [建设性意见｜人们期待的是1978的大刀阔斧](/articles/cdt/338673.md)
@@ -598,6 +600,4 @@
 6-15 [菏东诗吼｜当15%的失业率遇上1179万毕业生](/articles/cdt/339659.md)
 
 6-15 [徐潜川｜是时候构建我们自己的公众人物原则了](/articles/cdt/339661.md)
-
-6-15 [【重温】全媒派｜发声本身就是一种力量：专访《中国女记者性骚扰调查》发起者黄雪琴](/articles/cdt/339663.md)
 
