--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-24 [美国特勤局局长因特朗普遇刺事件引咎辞职](/articles/voa/1013873.md)
+
+7-24 [中国钢材出口暴增冲击全球市场，贸易摩擦预计将严重恶化](/articles/voa/1013874.md)
+
 7-23 [专家学者公开声讨 指定居所监视居住会否全面废止？](/articles/voa/1013875.md)
 
 7-23 [匈牙利总理奥尔班众叛亲离，欧盟取消其主持欧盟会议的权利](/articles/voa/1013876.md)
@@ -596,8 +600,4 @@
 7-12 [专访日本内阁广报官小林麻纪：日本加深与北约合作，但无意建立打造亚洲版北约](/articles/voa/1014171.md)
 
 7-12 [拜登警告习近平：助长俄乌战争将付出代价](/articles/voa/1014172.md)
-
-7-12 [世卫组织：禽流感风险评估因监测有限而受阻](/articles/voa/1014173.md)
-
-7-12 [哈里斯寻求帮助拜登赢得第二个白宫任期](/articles/voa/1014174.md)
 
