--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-24 [印度高官：印度要因应国际局势变化，考虑接纳中国直接投资](/articles/voa/1013872.md)
+
 7-24 [美国特勤局局长因特朗普遇刺事件引咎辞职](/articles/voa/1013873.md)
 
 7-24 [中国钢材出口暴增冲击全球市场，贸易摩擦预计将严重恶化](/articles/voa/1013874.md)
@@ -598,6 +600,4 @@
 7-12 [北京就欧盟南中国海仲裁声明表示不满](/articles/voa/1014170.md)
 
 7-12 [专访日本内阁广报官小林麻纪：日本加深与北约合作，但无意建立打造亚洲版北约](/articles/voa/1014171.md)
-
-7-12 [拜登警告习近平：助长俄乌战争将付出代价](/articles/voa/1014172.md)
 
