--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-24 [因腐败指控被定罪的参议员梅嫩德斯据称将辞职](/articles/voa/1013867.md)
+
+7-24 [一名中国公民因涉嫌串谋向美国进口逾两吨芬太尼原料而被起诉](/articles/voa/1013868.md)
+
 7-24 [联合国也门问题特使：胡塞武装对红海航运的威胁正在增加](/articles/voa/1013869.md)
 
 7-24 [厄瓜多尔海军准备打击加拉帕戈斯群岛周边的主要来自中国的非法捕鱼船队](/articles/voa/1013870.md)
@@ -596,8 +600,4 @@
 7-12 [美韩签署联合核威慑指引应对朝鲜威胁](/articles/voa/1014165.md)
 
 7-12 [国事光析：水深火热迎三中全会](/articles/voa/1014166.md)
-
-7-12 [拜登拒绝退选 誓言“要完成这份工作因为事关重大”](/articles/voa/1014167.md)
-
-7-12 [南中国海仲裁八周年，菲律宾誓言将坚守立场](/articles/voa/1014168.md)
 
