--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+7-24 [美国邀请苏丹交战方8月参加瑞士和谈](/articles/voa/1013858.md)
+
+7-24 [专家在美众院中共问题特设委员会听证会作证，示警中国“防火长城”为数字威权国家建立蓝图](/articles/voa/1013859.md)
+
+7-24 [监督组织说，世界7月21日的高温创下纪录](/articles/voa/1013860.md)
+
+7-24 [特朗普与哈里斯互相抨击,美国总统大选再掀高潮](/articles/voa/1013861.md)
+
+7-24 [台海两岸将在金门就2月快艇翻覆事件举行后续协商](/articles/voa/1013862.md)
+
 7-24 [对华政策跨国议会联盟将在台湾举行年度峰会，议程聚焦台海稳定](/articles/voa/1013863.md)
 
 7-24 [乌克兰外长首次访华，普京的后台老板能做战争调停人吗?](/articles/voa/1013864.md)
@@ -590,14 +600,4 @@
 7-13 [蒙古族人权领袖在世界公民法院控诉中共在内蒙推行文化灭绝政策](/articles/voa/1014156.md)
 
 7-13 [油罐车运载食用油风波发酵，揭乱象记者个人微博疑被注销](/articles/voa/1014157.md)
-
-7-12 [中国六月银行新增贷款数据令人失望，路透：多项关键数据创新低](/articles/voa/1014158.md)
-
-7-12 [乌克兰总检察长要求国际刑事法院对俄罗斯袭击基辅儿童医院进行战争罪行起诉](/articles/voa/1014159.md)
-
-7-12 [中国大型代表团出席台北旅展释回暖信号？ 分析：没有太多乐观空间](/articles/voa/1014160.md)
-
-7-12 [习近平、李强分别会晤所罗门群岛总理，两国走近让美国及其太平洋盟友担忧](/articles/voa/1014161.md)
-
-7-12 [中国与白俄罗斯联演秀 分析：伤害性不大，但污辱性极强](/articles/voa/1014162.md)
 
