--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,16 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-24 [看理想｜人大男教授性骚扰事件，为何令人愤怒？](/articles/cdt/338611.md)
+
+7-24 [风灵｜从娃哈哈风波看国有企业的内在矛盾](/articles/cdt/338612.md)
+
+7-24 [三联生活周刊｜四川雅安山洪致14死25失联：预警后，他们仍难相信灾难会发生](/articles/cdt/338614.md)
+
+7-24 [黑噪音｜当下的经济问题，是过去二十年竭泽而渔的代价](/articles/cdt/338616.md)
+
+7-24 [【404文库】“无论是为胡友平，还是为我们自己，我们都不能忘”（外二篇）](/articles/cdt/338617.md)
+
 7-24 [橙律师｜仅仅辞退性骚扰的男教授，就够了吗？](/articles/cdt/338621.md)
 
 7-23 [第一财经｜中央研究开征“地方附加税”，理论收入规模近万亿](/articles/cdt/338624.md)
@@ -590,14 +600,4 @@
 6-15 [亮见｜一定要保护好那个吐槽学校食堂的小孩哥啊](/articles/cdt/339642.md)
 
 6-15 [时代乡贤v｜事关国运，林毅夫老师的三次预测！](/articles/cdt/339646.md)
-
-6-15 [海涛评论｜派出所有点烦，村支书有点扯](/articles/cdt/339649.md)
-
-6-15 [不器是一种态度｜有这么一个男孩，他敢为了真理去面对一些事](/articles/cdt/339651.md)
-
-6-15 [风声OPINION｜强制统一门店招牌的城市，不如学学广州地铁允许投放个人广告](/articles/cdt/339654.md)
-
-6-15 [三联生活周刊｜985、211毕业生“反向升学”读技校，找到更高薪的工作了吗？](/articles/cdt/339657.md)
-
-6-15 [菏东诗吼｜当15%的失业率遇上1179万毕业生](/articles/cdt/339659.md)
 
