--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-24 [法塔赫和哈马斯在北京展示团结，但疑虑犹存](/articles/nyt/1042552.md)
+
 7-23 [“女性因素”能帮助哈里斯击败特朗普吗](/articles/nyt/1042553.md)
 
 7-23 [中国为何对哈萨克斯坦充满兴趣](/articles/nyt/1042554.md)
@@ -598,6 +600,4 @@
 4-18 [美国国家安全局：中国试图入侵美国关键基础设施](/articles/nyt/1042850.md)
 
 4-18 [面对中国罕见的核谈判邀请，美国该怎么做](/articles/nyt/1042851.md)
-
-4-18 [拜登呼吁大幅提高对中国钢铁和铝产品关税](/articles/nyt/1042852.md)
 
