--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-24 [以色列谴责《北京宣言》将哈马斯纳入战后加沙政府](/articles/voa/1013852.md)
+
+7-24 [拜登将在白宫椭圆形办公室发布全国讲话](/articles/voa/1013853.md)
+
 7-24 [朝鲜垃圾气球落在首尔总统府所在地 韩动员防化应急组勘查](/articles/voa/1013854.md)
 
 7-24 [台风“凯米”逼近 台湾停工停课、取消航班](/articles/voa/1013855.md)
@@ -596,8 +600,4 @@
 7-13 [众院通过法案禁止非公民投票，投票权倡导者：此举无必要且有恐吓作用](/articles/voa/1014150.md)
 
 7-13 [中共20届三中全会将在对消费疲软、产能过剩的担忧中召开](/articles/voa/1014151.md)
-
-7-13 [北约峰会闭幕之际再次强调对乌克兰的安全保障](/articles/voa/1014152.md)
-
-7-13 [美国对参与宗教和民族镇压的中国官员实施签证限制](/articles/voa/1014153.md)
 
