--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-24 [尼泊尔一小型飞机坠毁，18人罹难仅一名飞行员幸存](/articles/voa/1013850.md)
+
+7-24 [乌克兰外长告诉王毅：若莫斯科有诚意、乌克兰愿对话谈判](/articles/voa/1013851.md)
+
 7-24 [以色列谴责《北京宣言》将哈马斯纳入战后加沙政府](/articles/voa/1013852.md)
 
 7-24 [拜登将在白宫椭圆形办公室发布全国讲话](/articles/voa/1013853.md)
@@ -596,8 +600,4 @@
 7-13 [北约华盛顿峰会宣言开启了北约与中国关系的新篇章](/articles/voa/1014148.md)
 
 7-13 [南中国海问题国际仲裁决定八周年之际，美国再次呼吁中国停止危险行为](/articles/voa/1014149.md)
-
-7-13 [众院通过法案禁止非公民投票，投票权倡导者：此举无必要且有恐吓作用](/articles/voa/1014150.md)
-
-7-13 [中共20届三中全会将在对消费疲软、产能过剩的担忧中召开](/articles/voa/1014151.md)
 
