--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-24 [马斯克称星链互联网服务已在加沙医院激活](/articles/dw/1024804.md)
+
+7-24 [中乌外长会晤：为和谈铺路](/articles/dw/1024805.md)
+
 7-24 [賀錦麗民調微幅領先川普 兩人誰會贏？](/articles/dw/1024806.md)
 
 7-24 [举办奥运会 东道国经济受益几何？](/articles/dw/1024807.md)
@@ -596,8 +600,4 @@
 6-25 [加拿大考虑向中国电动汽车征收附加税](/articles/dw/1025102.md)
 
 6-25 [德国经济气氛持续恶化 工业界呼吁政府果断拿出刺激政策](/articles/dw/1025103.md)
-
-6-25 [2024欧洲杯：德铁上啤酒销量翻倍](/articles/dw/1025104.md)
-
-6-25 [客座评论：中欧贸易争端下一步去向何方？](/articles/dw/1025105.md)
 
