--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-24 [每日一语 2024.7.23](/articles/cdt/338591.md)
+
 7-24 [人民路56号｜另一种悲歌：高考招生总坑乡下人](/articles/cdt/338594.md)
 
-7-24 [正知局｜“鲜为人知”的共产党员赵紫阳](/articles/cdt/338597.md)
+7-24 [【404文库】正知局｜“鲜为人知”的共产党员赵紫阳](/articles/cdt/338597.md)
 
 7-24 [哲学王｜北大清华封闭校园，是社会衰败的征兆](/articles/cdt/338599.md)
 
@@ -598,6 +600,4 @@
 6-15 [维舟｜低生育率是社会总危机](/articles/cdt/339624.md)
 
 6-15 [【CDT报告汇·六四35周年】大声专访吴仁华（五）：寒冬游水偷渡澳门 香港的黄雀行动 ｜说温州话才找到蛇头｜感谢香港各界的六四捐助 ｜赵紫阳的女婿有情有义](/articles/cdt/339626.md)
-
-6-15 [往事与随想｜“偏科”应是常态，“不偏科”才不正常](/articles/cdt/339627.md)
 
