--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-25 [东盟外长会对南中国海冲突及美中对立感到棘手？](/articles/voa/1013837.md)
+
+7-25 [美国制裁中国境内一个帮助朝鲜弹道导弹与太空项目采购物品的网络](/articles/voa/1013838.md)
+
+7-25 [网络安全公司CrowdStrike：技术漏洞让坏数据漏网，导致全球技术停摆](/articles/voa/1013839.md)
+
+7-25 [“给我们工具，我们会完成任务” ：内塔尼亚胡在国会演讲中敦促美国加快对以色列的援助](/articles/voa/1013840.md)
+
 7-25 [巴以人士对中国促成的哈马斯-法塔赫和解协议提出质疑](/articles/voa/1013841.md)
 
 7-25 [斯里兰卡宣布与债权国达成债务重组协议 日本将重启援建项目](/articles/voa/1013842.md)
@@ -592,12 +600,4 @@
 7-13 [北京猛烈攻击拜登签署涉藏法案，藏人行政中央赞扬法案强化美国对藏政策](/articles/voa/1014135.md)
 
 7-13 [三中全会农村篇: 重回集体经济的三大宿命？](/articles/voa/1014136.md)
-
-7-13 [世界媒体看中国: 微妙的中朝关系](/articles/voa/1014137.md)
-
-7-13 [中国火箭军在内蒙古多波次试射 台湾警戒](/articles/voa/1014138.md)
-
-7-13 [中国启动暑期网络“清朗”行动 针对影响儿童的有害内容进行打击](/articles/voa/1014139.md)
-
-7-13 [应对中国经济胁迫 日德建立新经济安全框架](/articles/voa/1014140.md)
 
