--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-25 [法国当局挫败了几起针对巴黎奥运会的阴谋](/articles/voa/1013835.md)
+
 7-25 [美国：巴基斯坦的政治稳定对于其经济发展至关重要](/articles/voa/1013836.md)
 
 7-25 [东盟外长会对南中国海冲突及美中对立感到棘手？](/articles/voa/1013837.md)
@@ -598,6 +600,4 @@
 7-13 [世界公民法院对习近平发出逮捕令，控其犯有反人类罪和种族灭绝罪](/articles/voa/1014133.md)
 
 7-13 [专访胡佛历史学者林孝庭：蒋介石日记与国共恩仇](/articles/voa/1014134.md)
-
-7-13 [北京猛烈攻击拜登签署涉藏法案，藏人行政中央赞扬法案强化美国对藏政策](/articles/voa/1014135.md)
 
