--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-25 [名单盘点：哈里斯的竞选搭档会是谁？](/articles/voa/1013828.md)
+
 7-25 [以色列总理内塔尼亚胡在美国会发表演说，坚决捍卫针对哈马斯的战争](/articles/voa/1013829.md)
 
 7-25 [“把火炬传给新一代”：拜登在白宫发表讲话，解释退选原因](/articles/voa/1013830.md)
@@ -598,6 +600,4 @@
 7-14 [特朗普竞选活动上传枪响，竞选团队称特朗普目前情况良好](/articles/voa/1014126.md)
 
 7-14 [特朗普在宾夕法尼亚州竞选时被带离舞台，人群中明显传出枪声](/articles/voa/1014127.md)
-
-7-14 [特朗普在宾夕法尼亚的竞选活动中 人群中响起枪声 特朗普被迅速带离讲台](/articles/voa/1014128.md)
 
