--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-25 [乌克兰敦促中国在推动结束俄乌战争上发挥作用](/articles/nyt/1042547.md)
+
 7-25 [用“没有亲生孩子”攻击贺锦丽暴露了你的无知](/articles/nyt/1042548.md)
 
 7-24 [哈里斯“表情包”再翻红，尴尬米姆变大选东风？](/articles/nyt/1042549.md)
@@ -598,6 +600,4 @@
 4-19 [研究称中国近半城市地面沉降，北京下沉速度最快](/articles/nyt/1042845.md)
 
 4-19 [共和党金主、一家房地产初创企业和TikTok的起源](/articles/nyt/1042846.md)
-
-4-19 [关于TikTok母公司字节跳动如何崛起，你应该知道的](/articles/nyt/1042847.md)
 
