--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-25 [拜登強調交棒新世代 川普諷演說「聽不懂」](/articles/dw/1024797.md)
+
 7-24 [法国获2030年冬奥会举办权 需先提供保证书](/articles/dw/1024798.md)
 
 7-24 [科隆/波恩机场：气候抗议者粘在跑道上](/articles/dw/1024799.md)
@@ -598,6 +600,4 @@
 6-25 [夏季达沃斯论坛在大连开幕 李强呼吁多边合作](/articles/dw/1025095.md)
 
 6-25 [坎贝尔：普京访朝后 北京在互动中透露出焦虑](/articles/dw/1025096.md)
-
-6-25 [是否应该禁止儿童使用社交媒体？](/articles/dw/1025097.md)
 
