--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-25 [玖奌杂货铺｜什么反对文化入侵。这是违法，是反智，是在反对改革开放](/articles/cdt/338582.md)
+
 7-25 [知识分子｜李晟医生门诊中遇害，针对中国医生的暴力为什么越来越激进？](/articles/cdt/338584.md)
 
 7-25 [法律圆桌｜中国人民大学性骚扰事件，为何不能仅仅是师德问题？](/articles/cdt/338587.md)
@@ -598,6 +600,4 @@
 6-16 [【404空间】ROXIE｜ROXIE’s GOODBYE](/articles/cdt/339608.md)
 
 6-16 [建设性意见｜港澳通行证为什么还没取消？](/articles/cdt/339610.md)
-
-6-16 [【CDT专访】美国学者林培瑞谈刘晓波：中国抗争的星火不灭](/articles/cdt/339612.md)
 
