--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-25 [中国央行再次意外下调借贷利率](/articles/voa/1013825.md)
+
 7-25 [台风“格美”袭击台湾酿2死、1货轮沉没 正朝中国福建移动](/articles/voa/1013826.md)
 
 7-25 [专家解析拜登退选讲话：捍卫民主、警告特朗普、定义自己的政治遗产](/articles/voa/1013827.md)
@@ -598,6 +600,4 @@
 7-14 [以色列针对哈马斯军事指挥官的袭击导致加沙南部至少90人死亡](/articles/voa/1014123.md)
 
 7-14 [前总统特朗普竞选造势遇袭 美国会两党议员同声谴责政治暴力](/articles/voa/1014124.md)
-
-7-14 [前总统唐纳德·特朗普在遭遇暗杀企图后受伤但“安全”](/articles/voa/1014125.md)
 
