--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-25 [拜登的自相矛盾：当外交政策与选举考量之间出现冲突](/articles/nyt/1042545.md)
+
 7-25 [人大教授遭举报后被开除，官方声明为何不提“性骚扰”](/articles/nyt/1042546.md)
 
 7-25 [乌克兰敦促中国在推动结束俄乌战争上发挥作用](/articles/nyt/1042547.md)
@@ -598,6 +600,4 @@
 4-19 [中国出口激增威胁拜登产业政策](/articles/nyt/1042843.md)
 
 4-19 [苹果从中国区应用商店下架WhatsApp](/articles/nyt/1042844.md)
-
-4-19 [研究称中国近半城市地面沉降，北京下沉速度最快](/articles/nyt/1042845.md)
 
