--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-25 [美国众院成立特别工作组 调查特朗普集会枪击事件](/articles/voa/1013821.md)
+
+7-25 [北美防空司令部战机升空 在阿拉斯加外海拦截中俄轰炸机](/articles/voa/1013822.md)
+
 7-25 [美国经济增长在第二季度有所加快，通胀有所缓解](/articles/voa/1013823.md)
 
 7-25 [香港法院判黎智英三项国安控罪表面证据成立](/articles/voa/1013824.md)
@@ -596,8 +600,4 @@
 7-14 [兴奋剂丑闻阴影下 中国代表队着眼巴黎奥运霸主地位](/articles/voa/1014119.md)
 
 7-14 [联邦调查局负责对特朗普在竞选集会上遇刺未遂事件的调查](/articles/voa/1014120.md)
-
-7-14 [特朗普遭遇行刺未遂事件 美国华人选民怎么看？](/articles/voa/1014121.md)
-
-7-14 [前总统特朗普在遭遇枪击后，拜登总统发表声明强烈谴责政治暴力](/articles/voa/1014122.md)
 
