--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-25 [亮见｜穿着耐克反对文化入侵，怕不是有什么大病？](/articles/cdt/338577.md)
+
 7-25 [声道｜河南急了，喊话富士康，意味深长](/articles/cdt/338579.md)
 
 7-25 [玖奌杂货铺｜什么反对文化入侵。这是违法，是反智，是在反对改革开放](/articles/cdt/338582.md)
@@ -598,6 +600,4 @@
 6-16 [天涯行路｜不得了，美国又爆了一根水管](/articles/cdt/339600.md)
 
 7-1 [【中国哭墙】有人为屠戮妇孺叫好，有人以血肉之躯挡利刃尖刀（6月1日-6月30日，2024年）](/articles/cdt/339606.md)
-
-6-16 [【404空间】ROXIE｜ROXIE’s GOODBYE](/articles/cdt/339608.md)
 
