--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+7-25 [美国和加拿大在阿拉斯加拦截中俄战机](/articles/dw/1024792.md)
+
+7-25 [气候抗议活动阻断德国法兰克福机场](/articles/dw/1024793.md)
+
+7-25 [以色列总理在美国国会演讲 佩洛西：史上最糟糕的一次](/articles/dw/1024794.md)
+
+7-25 [芯片巨头德国建厂进展缓慢 唯有台积电例外](/articles/dw/1024795.md)
+
+7-25 [賀錦麗能夠打敗川普嗎？](/articles/dw/1024796.md)
+
 7-25 [拜登強調交棒新世代 川普諷演說「聽不懂」](/articles/dw/1024797.md)
 
 7-24 [法国获2030年冬奥会举办权 需先提供保证书](/articles/dw/1024798.md)
@@ -590,14 +600,4 @@
 6-26 [德国经济部长前脚走 交通部长再访华](/articles/dw/1025090.md)
 
 6-26 [让数据说话：中国市场对德国汽车制造商有多重要](/articles/dw/1025091.md)
-
-6-26 [前游泳冠军“飞鱼”：美国运动员已不再相信世界反兴奋剂组织](/articles/dw/1025092.md)
-
-6-26 [維基解密案纏訟14年落幕 阿桑奇認罪換自由](/articles/dw/1025093.md)
-
-6-26 [美國駐華大使批評中國煽動反美情緒](/articles/dw/1025094.md)
-
-6-25 [夏季达沃斯论坛在大连开幕 李强呼吁多边合作](/articles/dw/1025095.md)
-
-6-25 [坎贝尔：普京访朝后 北京在互动中透露出焦虑](/articles/dw/1025096.md)
 
