--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-25 [“永不沉没”的巴黎：伟大的光影之城因奥运焕发新颜](/articles/nyt/1042543.md)
+
 7-25 [拜登退选后首次发表全国讲话：捍卫民主高于个人抱负](/articles/nyt/1042544.md)
 
 7-25 [拜登的自相矛盾：当外交政策与选举考量之间出现冲突](/articles/nyt/1042545.md)
@@ -598,6 +600,4 @@
 4-22 [“美国队被骗了”：中国游泳选手药检风波引发争议与愤怒](/articles/nyt/1042841.md)
 
 4-22 [23名中国游泳选手东京奥运会前药检阳性，仍参赛并夺牌](/articles/nyt/1042842.md)
-
-4-19 [中国出口激增威胁拜登产业政策](/articles/nyt/1042843.md)
 
