--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-25 [乌克兰： “割地求和”行得通吗？](/articles/dw/1024791.md)
+
 7-25 [美国和加拿大在阿拉斯加拦截中俄战机](/articles/dw/1024792.md)
 
 7-25 [气候抗议活动阻断德国法兰克福机场](/articles/dw/1024793.md)
@@ -598,6 +600,4 @@
 6-26 [所罗门总理访澳签声明：堪培拉是安全伙伴首选](/articles/dw/1025089.md)
 
 6-26 [德国经济部长前脚走 交通部长再访华](/articles/dw/1025090.md)
-
-6-26 [让数据说话：中国市场对德国汽车制造商有多重要](/articles/dw/1025091.md)
 
