--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-25 [每日一语 2024.7.24](/articles/cdt/338572.md)
+
+7-25 [凤羽财经｜这几年有点上进心的年轻人，都负债累累了……](/articles/cdt/338574.md)
+
 7-25 [亮见｜穿着耐克反对文化入侵，怕不是有什么大病？](/articles/cdt/338577.md)
 
 7-25 [声道｜河南急了，喊话富士康，意味深长](/articles/cdt/338579.md)
@@ -596,8 +600,4 @@
 6-17 [建设性意见｜因为救命而耽误上课的老师，维护规定却毫无担当的领导](/articles/cdt/339593.md)
 
 6-17 [學人Scholar｜劳东燕：为走出抑郁状态，我做了这几方面调适](/articles/cdt/339594.md)
-
-6-16 [天涯行路｜不得了，美国又爆了一根水管](/articles/cdt/339600.md)
-
-7-1 [【中国哭墙】有人为屠戮妇孺叫好，有人以血肉之躯挡利刃尖刀（6月1日-6月30日，2024年）](/articles/cdt/339606.md)
 
