--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-26 [特朗普针对中国的关税与加密货币政策获硅谷商人支持](/articles/voa/1013813.md)
+
+7-26 [三罪表证成立11月再讯 黎智英将出庭自辩](/articles/voa/1013814.md)
+
+7-26 [拜登力挺哈里斯，中国舆论热议 分析:谁胜选都会继续抗中](/articles/voa/1013815.md)
+
+7-26 [中国寻求外交斡旋扩大影响力 分析：目前只具象征意义](/articles/voa/1013816.md)
+
 7-25 [美中关系持续紧张导致部分美国州政府从中国公司撤资](/articles/voa/1013817.md)
 
 7-25 [手机市场竞争激烈 “苹果”在华销售下滑 跌出前五](/articles/voa/1013818.md)
@@ -592,12 +600,4 @@
 7-14 [刘晓波逝世七周年，洛杉矶民主人士举行缅怀仪式，传承他追求自由和人权的精神](/articles/voa/1014111.md)
 
 7-14 [数百人走上巴黎街头 纪念在俄乌战争中阵亡的乌克兰运动员](/articles/voa/1014112.md)
-
-7-14 [北约与中国的竞争在华盛顿峰会后加剧](/articles/voa/1014113.md)
-
-7-14 [联邦调查局确认特朗普刺杀未遂案嫌疑人身份](/articles/voa/1014114.md)
-
-7-14 [中国官媒批机构疯抢国债是做空经济](/articles/voa/1014115.md)
-
-7-14 [克宫挟欧洲各国首都 反制美国在德国部署导弹](/articles/voa/1014116.md)
 
