--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-26 [西方制裁导致中俄贸易结算困难，迫使两国转用数字贸易平台](/articles/voa/1013811.md)
+
+7-26 [中国政府刺激经济新举措 发3000亿国债支持消费品以旧换新](/articles/voa/1013812.md)
+
 7-26 [特朗普针对中国的关税与加密货币政策获硅谷商人支持](/articles/voa/1013813.md)
 
 7-26 [三罪表证成立11月再讯 黎智英将出庭自辩](/articles/voa/1013814.md)
@@ -596,8 +600,4 @@
 7-14 [各国领导人纷纷对特朗普在竞选集会上遭枪击受伤作出反应](/articles/voa/1014109.md)
 
 7-14 [中国媒体与网民热议特朗普遭枪击 推测将有助其选情](/articles/voa/1014110.md)
-
-7-14 [刘晓波逝世七周年，洛杉矶民主人士举行缅怀仪式，传承他追求自由和人权的精神](/articles/voa/1014111.md)
-
-7-14 [数百人走上巴黎街头 纪念在俄乌战争中阵亡的乌克兰运动员](/articles/voa/1014112.md)
 
