--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [中国经济下滑司法扭曲令外资律师行陆续撤出](/articles/voa/1013810.md)
+
 7-26 [西方制裁导致中俄贸易结算困难，迫使两国转用数字贸易平台](/articles/voa/1013811.md)
 
 7-26 [中国政府刺激经济新举措 发3000亿国债支持消费品以旧换新](/articles/voa/1013812.md)
@@ -598,6 +600,4 @@
 7-14 [特朗普遭遇枪击让民众对共和党党代会感到担忧](/articles/voa/1014108.md)
 
 7-14 [各国领导人纷纷对特朗普在竞选集会上遭枪击受伤作出反应](/articles/voa/1014109.md)
-
-7-14 [中国媒体与网民热议特朗普遭枪击 推测将有助其选情](/articles/voa/1014110.md)
 
