--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-26 [美防长对阿拉斯加海岸附近的俄中联合空中行动泰然处之](/articles/voa/1013808.md)
+
+7-26 [一名朝鲜男子因涉嫌对美国医院进行勒索软件攻击而被起诉](/articles/voa/1013809.md)
+
 7-26 [中国经济下滑司法扭曲令外资律师行陆续撤出](/articles/voa/1013810.md)
 
 7-26 [西方制裁导致中俄贸易结算困难，迫使两国转用数字贸易平台](/articles/voa/1013811.md)
@@ -596,8 +600,4 @@
 7-15 [有关特朗普枪击案枪手的新信息浮出水面](/articles/voa/1014106.md)
 
 7-15 [遭遇未遂刺杀图谋后，特朗普呼吁美国“保持强大”、“不让邪恶获胜”](/articles/voa/1014107.md)
-
-7-14 [特朗普遭遇枪击让民众对共和党党代会感到担忧](/articles/voa/1014108.md)
-
-7-14 [各国领导人纷纷对特朗普在竞选集会上遭枪击受伤作出反应](/articles/voa/1014109.md)
 
