--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-26 [反击中国影响力：鲁比奥参议员推出《美印防务合作法》](/articles/voa/1013806.md)
+
+7-26 [切断一带一路后首次出访北京，梅洛尼带着航母还是收款机?](/articles/voa/1013807.md)
+
 7-26 [美防长对阿拉斯加海岸附近的俄中联合空中行动泰然处之](/articles/voa/1013808.md)
 
 7-26 [一名朝鲜男子因涉嫌对美国医院进行勒索软件攻击而被起诉](/articles/voa/1013809.md)
@@ -596,8 +600,4 @@
 7-15 [监管恶化+经济低靡+地缘政治紧张，美国律所继续加速撤离中国](/articles/voa/1014104.md)
 
 7-15 [特朗普在刺杀图谋后呼吁美国“保持强大，坚决”](/articles/voa/1014105.md)
-
-7-15 [有关特朗普枪击案枪手的新信息浮出水面](/articles/voa/1014106.md)
-
-7-15 [遭遇未遂刺杀图谋后，特朗普呼吁美国“保持强大”、“不让邪恶获胜”](/articles/voa/1014107.md)
 
