--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-26 [美中台争相发展军用无人机技术领域](/articles/voa/1013802.md)
+
+7-26 [拜登和内塔尼亚胡在白宫会晤并讨论加沙战争与停火谈判](/articles/voa/1013803.md)
+
+7-26 [耶伦：将继续敦促中国解决导致产能过剩的宏观经济模式](/articles/voa/1013804.md)
+
+7-26 [美国防部长：中俄军机从任何方向接近美领空都将被拦截](/articles/voa/1013805.md)
+
 7-26 [反击中国影响力：鲁比奥参议员推出《美印防务合作法》](/articles/voa/1013806.md)
 
 7-26 [切断一带一路后首次出访北京，梅洛尼带着航母还是收款机?](/articles/voa/1013807.md)
@@ -592,12 +600,4 @@
 7-15 [拜登敦促国家在政治暴力之后“向后退一步”](/articles/voa/1014100.md)
 
 7-15 [三中全会开幕，看点在哪？难点何在？](/articles/voa/1014101.md)
-
-7-15 [拜登在特朗普遭遇刺杀企图后谴责政治暴力，呼吁团结](/articles/voa/1014102.md)
-
-7-15 [美国寻找对特朗普暗杀企图的动机](/articles/voa/1014103.md)
-
-7-15 [监管恶化+经济低靡+地缘政治紧张，美国律所继续加速撤离中国](/articles/voa/1014104.md)
-
-7-15 [特朗普在刺杀图谋后呼吁美国“保持强大，坚决”](/articles/voa/1014105.md)
 
