--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-26 [yaya的房间｜人大王贵元事件有感——我也曾遇到问题“导师”](/articles/cdt/338565.md)
+
 7-25 [每日一语 2024.7.24](/articles/cdt/338572.md)
 
 7-25 [凤羽财经｜这几年有点上进心的年轻人，都负债累累了……](/articles/cdt/338574.md)
@@ -598,6 +600,4 @@
 6-17 [拆界艺术｜一场由家暴引发的社火](/articles/cdt/339592.md)
 
 6-17 [建设性意见｜因为救命而耽误上课的老师，维护规定却毫无担当的领导](/articles/cdt/339593.md)
-
-6-17 [學人Scholar｜劳东燕：为走出抑郁状态，我做了这几方面调适](/articles/cdt/339594.md)
 
