--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [中国罕见地赞扬菲律宾总统禁止中国在线赌博运营商](/articles/voa/1013799.md)
+
 7-26 [中国“走线客”冲击洛杉矶华人就业市场](/articles/voa/1013800.md)
 
 7-26 [华盛顿警告对手：美国政治变动不是软弱的表现](/articles/voa/1013801.md)
@@ -598,6 +600,4 @@
 7-15 [北约指责中国是俄乌战争“决定性助推者”后，中俄展开联合海军演习](/articles/voa/1014097.md)
 
 7-15 [中国第二季度经济增长不及预期](/articles/voa/1014098.md)
-
-7-15 [金与正暗示将恢复向韩国放飞“垃圾气球”](/articles/voa/1014099.md)
 
