--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-26 [中印關係好轉？雙邊外長：盡早解決邊境問題](/articles/dw/1024786.md)
+
+7-26 [法塔赫和哈马斯签署《北京宣言》](/articles/dw/1024787.md)
+
 7-25 [《苹果日报》创办人黎智英11月将首次出庭应辩](/articles/dw/1024788.md)
 
 7-25 [哪些政要将出席巴黎奥运会开幕式？](/articles/dw/1024789.md)
@@ -596,8 +600,4 @@
 6-26 [媒体：欧盟“微调”对华电动车关税](/articles/dw/1025084.md)
 
 6-26 [荷兰“不粘锅”将出任新一届北约秘书长](/articles/dw/1025085.md)
-
-6-26 [朝鲜战争爆发74周年之际 半岛危机加剧](/articles/dw/1025086.md)
-
-6-26 [中国、德国、台湾：那些因让座爆发的互相伤害](/articles/dw/1025087.md)
 
