--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-26 [端传媒 x NGOCN｜女性抗争者李翘楚： “我有英雄情结，但我幻想的英雄是我自己”](/articles/cdt/338558.md)
+
+7-26 [WOMEN我们｜声援“四通桥”抗议者郭艺：“实名让我感觉更有力量”](/articles/cdt/338562.md)
+
 7-26 [衣者褚｜女乡党委书记之父举报县委书记性侵，省级纪委应尽快介入](/articles/cdt/338564.md)
 
 7-26 [yaya的房间｜人大王贵元事件有感——我也曾遇到问题“导师”](/articles/cdt/338565.md)
@@ -596,8 +600,4 @@
 6-17 [返朴｜先救人还是先上课？医生不该面临如此选择](/articles/cdt/339564.md)
 
 6-17 [【CDT图集】在习近平新时代读物旁“恶意摆书”：《换届》《小学生心理学漫画》《独裁者手册》](/articles/cdt/339584.md)
-
-6-17 [每日一语 2024.6.16](/articles/cdt/339590.md)
-
-6-17 [拆界艺术｜一场由家暴引发的社火](/articles/cdt/339592.md)
 
