--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [墨西哥大毒枭在美国得克萨斯州被捕](/articles/voa/1013798.md)
+
 7-26 [中国罕见地赞扬菲律宾总统禁止中国在线赌博运营商](/articles/voa/1013799.md)
 
 7-26 [中国“走线客”冲击洛杉矶华人就业市场](/articles/voa/1013800.md)
@@ -598,6 +600,4 @@
 7-15 [共和党全国大会首日预计将关注经济议题](/articles/voa/1014096.md)
 
 7-15 [北约指责中国是俄乌战争“决定性助推者”后，中俄展开联合海军演习](/articles/voa/1014097.md)
-
-7-15 [中国第二季度经济增长不及预期](/articles/voa/1014098.md)
 
