--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [斯里兰卡将举行自局势动荡以来的首次总统选举](/articles/voa/1013796.md)
+
 7-26 [哈里斯敦促内塔尼亚胡结束加沙战争](/articles/voa/1013797.md)
 
 7-26 [墨西哥大毒枭在美国得克萨斯州被捕](/articles/voa/1013798.md)
@@ -598,6 +600,4 @@
 7-15 [共和党全国大会在特朗普遭枪击后开幕 安保问题受关注](/articles/voa/1014094.md)
 
 7-15 [三中全会登场 中共出台何种经济措施备受关注](/articles/voa/1014095.md)
-
-7-15 [共和党全国大会首日预计将关注经济议题](/articles/voa/1014096.md)
 
