--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-27 [土耳其逮捕维吾尔难民人数激增，跟中土两国加强经济和反恐联系有关？](/articles/voa/1013787.md)
+
+7-27 [印中外长同意抓紧努力，尽快完成从争议边界撤军](/articles/voa/1013788.md)
+
+7-27 [台剧《零日攻击》刻画台海战事，前导片刻画战前乱象警醒台湾人](/articles/voa/1013789.md)
+
 7-26 [英国敦促中国阻止中企给俄罗斯军方提供支持](/articles/voa/1013790.md)
 
 7-26 [王毅称中日关系处于“关键阶段”，日外相要求中国释放日本公民](/articles/voa/1013791.md)
@@ -594,10 +600,4 @@
 7-16 [泽连斯基紧锣密鼓为第二次乌克兰和平峰会做准备](/articles/voa/1014085.md)
 
 7-16 [中共三中全会北京召开 公布经济增速5%实质意义有多少？](/articles/voa/1014086.md)
-
-7-16 [意大利和西班牙支持欧盟对中国产电动车加征关税](/articles/voa/1014087.md)
-
-7-15 [民调显示富国疏远中国，年轻人和发展中国家较喜欢中国](/articles/voa/1014088.md)
-
-7-15 [联合国讨论海底矿物资源采矿法，但反对声音不绝于耳](/articles/voa/1014089.md)
 
