--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-27 [台湾汉光40号军演落幕 分析: “实战化”略具成效](/articles/voa/1013783.md)
+
 7-27 [美日2+2暨四方会谈东京登场 延伸威慑成为焦点](/articles/voa/1013784.md)
 
 7-27 [巴黎奥运会上的乌克兰运动员：为追逐梦想而喜，为战争残酷而悲](/articles/voa/1013785.md)
@@ -598,6 +600,4 @@
 7-16 [巴基斯坦寻求禁止前总理汗的政党](/articles/voa/1014081.md)
 
 7-16 [阿根廷联邦法院下令对中国当局涉嫌虐待维吾尔人展开调查](/articles/voa/1014082.md)
-
-7-16 [参议员梅嫩德斯被控受贿案的陪审团恢复审议](/articles/voa/1014083.md)
 
