--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-27 [木蹊说｜爷爷，我也想去中信建投](/articles/cdt/338512.md)
+
+7-27 [西坡原创｜穷得只剩下赢了](/articles/cdt/338514.md)
+
 7-27 [每日一语 2024.7.26](/articles/cdt/338537.md)
 
-7-27 [【翻车现场】“不开评论没人信，开了评论就翻车“：三中全会后政府部门新闻发布会遭遇集体翻车](/articles/cdt/338538.md)
+7-27 [【翻车现场】“不开评论没人信，开了评论就翻车”：三中全会后政府部门新闻发布会遭遇集体翻车](/articles/cdt/338538.md)
 
 7-27 [亮见｜堂堂乡党委书记，居然都需要网络举报了](/articles/cdt/338540.md)
 
@@ -596,8 +600,4 @@
 6-18 [国际金融报｜宁德时代辟谣“896”工作制，员工反驳：传闻属实](/articles/cdt/339509.md)
 
 6-18 [木蹊说｜打趴外国企业，打工人就幸福了吗？](/articles/cdt/339512.md)
-
-6-18 [【CDT图集】全球9城中国女权行动者举起巨型横幅 ：释放黄雪琴王建兵](/articles/cdt/339546.md)
-
-6-18 [【404文库】星辰大海的边界｜补税风波](/articles/cdt/339549.md)
 
