--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-27 [台风“格美”袭击中国 福建已有近80万人受灾](/articles/voa/1013769.md)
+
 7-27 [韩国队在开幕式被介绍成“朝鲜队” 国际奥委会道歉](/articles/voa/1013770.md)
 
 7-27 [联邦调查局证实特朗普在袭击事件中遭子弹击中](/articles/voa/1013771.md)
@@ -598,6 +600,4 @@
 7-16 [中共三中全会欲提振经济 但体制不公已让社会火山发出“汩汩作响的气泡”](/articles/voa/1014067.md)
 
 7-16 [特朗普正式成为共和党总统候选人](/articles/voa/1014068.md)
-
-7-16 [国土安全部长：特朗普集会现场安保是一次“失败”](/articles/voa/1014069.md)
 
