--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-27 [中菲协议后 菲律宾首次补给坐滩军舰](/articles/dw/1024771.md)
+
+7-27 [欧盟批准没收俄资产收入用于乌克兰](/articles/dw/1024772.md)
+
+7-27 [欧美媒体热评北京斡旋法塔赫、哈马斯](/articles/dw/1024773.md)
+
+7-27 [G20声明共同努力对超级富豪征税](/articles/dw/1024774.md)
+
 7-27 [特朗普遇刺受伤  全球震惊](/articles/dw/1024775.md)
 
 7-27 [报告：中国电动汽车市场地位提升](/articles/dw/1024776.md)
@@ -592,12 +600,4 @@
 6-28 [苏州“6·24”日本人遇袭事件：胡友平见义勇为伤重离世](/articles/dw/1025069.md)
 
 6-28 [美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025070.md)
-
-6-28 [日菲或签署安全协议 允许军队互入对方领土](/articles/dw/1025071.md)
-
-6-28 [猪肉虽美 难挡欧中贸易战](/articles/dw/1025072.md)
-
-6-28 [專訪黃台仰：日本需以德國經驗為鑒看待台海](/articles/dw/1025073.md)
-
-6-27 [朝鲜称成功试射多弹头导弹 韩国：夸大其词](/articles/dw/1025074.md)
 
