--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
+
 7-27 [木蹊说｜爷爷，我也想去中信建投](/articles/cdt/338512.md)
 
 7-27 [西坡原创｜穷得只剩下赢了](/articles/cdt/338514.md)
@@ -598,6 +600,4 @@
 6-18 [姜汁满头｜制造网红，给年轻人希望](/articles/cdt/339507.md)
 
 6-18 [国际金融报｜宁德时代辟谣“896”工作制，员工反驳：传闻属实](/articles/cdt/339509.md)
-
-6-18 [木蹊说｜打趴外国企业，打工人就幸福了吗？](/articles/cdt/339512.md)
 
