--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-27 [澳大利亚外长呼吁缅甸军政府“走一条不同的道路”](/articles/voa/1013768.md)
+
 7-27 [台风“格美”袭击中国 福建已有近80万人受灾](/articles/voa/1013769.md)
 
 7-27 [韩国队在开幕式被介绍成“朝鲜队” 国际奥委会道歉](/articles/voa/1013770.md)
@@ -598,6 +600,4 @@
 7-16 [国会要求特勤局对枪击特朗普事件作出解释](/articles/voa/1014066.md)
 
 7-16 [中共三中全会欲提振经济 但体制不公已让社会火山发出“汩汩作响的气泡”](/articles/voa/1014067.md)
-
-7-16 [特朗普正式成为共和党总统候选人](/articles/voa/1014068.md)
 
