--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-27 [美方称布林肯与中国外长会晤“富有成效”](/articles/dw/1024769.md)
+
+7-27 [巴黎布下“天罗地网” 确保奥运安全](/articles/dw/1024770.md)
+
 7-27 [中菲协议后 菲律宾首次补给坐滩军舰](/articles/dw/1024771.md)
 
 7-27 [欧盟批准没收俄资产收入用于乌克兰](/articles/dw/1024772.md)
@@ -596,8 +600,4 @@
 6-28 [分析：美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025067.md)
 
 6-28 [2024欧洲杯：年轻主帅给德国队带来新希望](/articles/dw/1025068.md)
-
-6-28 [苏州“6·24”日本人遇袭事件：胡友平见义勇为伤重离世](/articles/dw/1025069.md)
-
-6-28 [美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025070.md)
 
