--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-27 [全球媒体辣评巴黎奥运会开幕式](/articles/dw/1024767.md)
+
+7-27 [美司法部：TikTok收集美国用户敏感信息](/articles/dw/1024768.md)
+
 7-27 [美方称布林肯与中国外长会晤“富有成效”](/articles/dw/1024769.md)
 
 7-27 [巴黎布下“天罗地网” 确保奥运安全](/articles/dw/1024770.md)
@@ -596,8 +600,4 @@
 6-28 [SpaceX将建太空船送国际空间站最后一程](/articles/dw/1025065.md)
 
 6-28 [这些年 岁月如何蚀刻了阿桑奇的容颜?](/articles/dw/1025066.md)
-
-6-28 [分析：美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025067.md)
-
-6-28 [2024欧洲杯：年轻主帅给德国队带来新希望](/articles/dw/1025068.md)
 
