--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 7-28 [唐一水｜怎么，巴黎开幕吓到你了？](/articles/cdt/338499.md)
 
+7-28 [【网络民议】“It must be Chinese before you”](/articles/cdt/338503.md)
+
 7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
 
 7-27 [木蹊说｜爷爷，我也想去中信建投](/articles/cdt/338512.md)
@@ -34,6 +36,8 @@
 7-26 [衣者褚｜女乡党委书记之父举报县委书记性侵，省级纪委应尽快介入](/articles/cdt/338564.md)
 
 7-26 [yaya的房间｜人大王贵元事件有感——我也曾遇到问题“导师”](/articles/cdt/338565.md)
+
+7-28 [【网络民议】爱党爱国加十分，越级上访减十分](/articles/cdt/338566.md)
 
 7-27 [【翻车现场】“不管干旱还是洪灾，都不影响我国粮食产量大增”](/articles/cdt/338567.md)
 
@@ -596,8 +600,4 @@
 6-19 [大猫财经Pro｜一查就停产，很多大老板开始失眠了……](/articles/cdt/339496.md)
 
 6-19 [城市的地得｜残酷的闲暇：女工、冷藏车与和河南乡村图景](/articles/cdt/339498.md)
-
-6-19 [每日一语 2024.6.18](/articles/cdt/339503.md)
-
-6-18 [网易新闻｜烟草局伪造证据被监控拍下，甘肃农民领刑五年](/articles/cdt/339505.md)
 
