--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-28 [共产党越管越严 致富之路越走越窄 中国人把矛头对准制度不公和习近平恶政](/articles/voa/1013759.md)
+
+7-28 [加沙官员说，以色列攻击学校至少造成30人死亡](/articles/voa/1013760.md)
+
 7-28 [中国副财长否认产能过剩，耶伦：世界不接受中国独霸全球制造业](/articles/voa/1013761.md)
 
 7-27 [布林肯会晤王毅：台湾问题立场对立，美方关切，中方严厉](/articles/voa/1013762.md)
@@ -596,8 +600,4 @@
 7-16 [中国斡旋哈马斯和法塔赫谈判 促使双方实现和解团结](/articles/voa/1014057.md)
 
 7-16 [改西藏英译名Xizang，学者:国际仍沿用Tibet 洗脑成效不彰](/articles/voa/1014058.md)
-
-7-16 [特朗普凯旋亮相后 共和党大会第二天将聚焦移民问题](/articles/voa/1014059.md)
-
-7-16 [深圳失业保险基金入不敷出 政府讨回部分民众失业金](/articles/voa/1014060.md)
 
