--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-28 [马云和肖建华·中共权贵和钱权交易](/articles/voa/1013749.md)
+
 7-28 [以色列称真主党的袭击“越过红线” 伊朗则警告以色列对黎巴嫩的攻击](/articles/voa/1013750.md)
 
 7-28 [台海两岸7月30日重启“0214金门事件”协商 当日有望送回遗体和船只](/articles/voa/1013751.md)
@@ -598,6 +600,4 @@
 7-17 [美国联邦参议员梅嫩德斯被判所有指控成立，包括接受现金、黄金和汽车等贿赂](/articles/voa/1014047.md)
 
 7-17 [英中关系大转折: 中国在英国新的防务审查中被标为“致命”威胁](/articles/voa/1014048.md)
-
-7-17 [朝鲜强迫劳动可能构成反人类罪行](/articles/voa/1014049.md)
 
