--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-29 [巴基斯坦与中国进行债务重组谈判](/articles/voa/1013740.md)
+
 7-29 [中国电动车欧美遇挫 在非洲攻无不克](/articles/voa/1013741.md)
 
 7-29 [欧盟人工智能和汽车芯片新政或加剧中欧经贸争端](/articles/voa/1013742.md)
@@ -598,6 +600,4 @@
 7-17 [特朗普称台湾应为其防务向美国支付费用](/articles/voa/1014038.md)
 
 7-17 [马航MH17空难十周年正义仍未实现 罹难者亲属齐聚悼念](/articles/voa/1014039.md)
-
-7-17 [阿斯彭安全论坛执行主任：若特朗普再当选，美中关系将充满波折](/articles/voa/1014040.md)
 
