--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-29 [产能过剩、价格大跌：中国太阳能产业陷入动荡](/articles/nyt/1042536.md)
+
 7-29 [布林肯与王毅会面，就中国对俄罗斯军事支持向中方施压](/articles/nyt/1042537.md)
 
 7-26 [美国芯片为何仍流入俄罗斯？香港空壳公司背后的秘密链条](/articles/nyt/1042538.md)
@@ -598,6 +600,4 @@
 4-23 [拜登政府官员呼吁对中国游泳禁药事件展开独立调查](/articles/nyt/1042834.md)
 
 4-23 [这场正被全世界忽视的缅甸内战为何事关重大](/articles/nyt/1042835.md)
-
-4-23 [三名德国公民涉嫌为中国安全部门收集敏感数据被捕](/articles/nyt/1042836.md)
 
