--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [冰点周刊｜一个爱“说话”的普通市民，走了](/articles/cdt/338460.md)
+
+7-29 [【404文库】建设性意见｜奥运开幕式的节目居然没有审查！太可怕了……](/articles/cdt/338463.md)
+
+7-29 [冰川思享号｜巴黎奥运会，一场冒犯所有人的盛会](/articles/cdt/338465.md)
+
 7-29 [【网络民议】“央视解说沉默了，直播这事不适合央视，不能完全把控局面”](/articles/cdt/338489.md)
 
 7-28 [Lola｜这世界有太多过去，未来却不断缩水](/articles/cdt/338497.md)
@@ -594,10 +600,4 @@
 6-20 [【404文库】建设性意见｜中联部部长在海参崴出席“抵制新殖民主义”论坛，让我非常困惑](/articles/cdt/339481.md)
 
 6-20 [【敏感词库】厄瓜多尔走线、美国引诱北京攻台、表弟齐明](/articles/cdt/339486.md)
-
-6-20 [每日一语 2024.6.19](/articles/cdt/339489.md)
-
-6-19 [澎湃人物｜10名农妇，搭上致命冷藏车](/articles/cdt/339491.md)
-
-6-19 [再昧拾金｜乌利茨卡娅：流亡，禁书，权力的手](/articles/cdt/339493.md)
 
