--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-29 [梅洛尼访华签署三年行动计划 承诺“重启”与中国的合作](/articles/voa/1013738.md)
+
 7-29 [埃尔多安：土耳其可能进入以色列帮助巴勒斯坦人](/articles/voa/1013739.md)
 
 7-29 [巴基斯坦与中国进行债务重组谈判](/articles/voa/1013740.md)
@@ -598,6 +600,4 @@
 7-17 [气候融资谈判停滞 COP29主办国阿塞拜疆促各方打破僵局](/articles/voa/1014036.md)
 
 7-17 [拜登在竞选活动中呼吁美国人谴责一切形式的暴力](/articles/voa/1014037.md)
-
-7-17 [特朗普称台湾应为其防务向美国支付费用](/articles/voa/1014038.md)
 
