--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [冰川思享号｜一座城市18个高铁站，真为地方财政捏一把汗](/articles/cdt/338457.md)
+
 7-29 [冰点周刊｜一个爱“说话”的普通市民，走了](/articles/cdt/338460.md)
 
 7-29 [【404文库】建设性意见｜奥运开幕式的节目居然没有审查！太可怕了……](/articles/cdt/338463.md)
@@ -598,6 +600,4 @@
 6-20 [唐一水｜停更10个月，我回来了](/articles/cdt/339477.md)
 
 6-20 [【404文库】建设性意见｜中联部部长在海参崴出席“抵制新殖民主义”论坛，让我非常困惑](/articles/cdt/339481.md)
-
-6-20 [【敏感词库】厄瓜多尔走线、美国引诱北京攻台、表弟齐明](/articles/cdt/339486.md)
 
