--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [每日一语 2024.7.28](/articles/cdt/338448.md)
+
 7-29 [冰川思享号｜一座城市18个高铁站，真为地方财政捏一把汗](/articles/cdt/338457.md)
 
 7-29 [冰点周刊｜一个爱“说话”的普通市民，走了](/articles/cdt/338460.md)
@@ -10,6 +12,8 @@
 7-29 [【404文库】建设性意见｜奥运开幕式的节目居然没有审查！太可怕了……](/articles/cdt/338463.md)
 
 7-29 [冰川思享号｜巴黎奥运会，一场冒犯所有人的盛会](/articles/cdt/338465.md)
+
+7-29 [【敏感词库】退休时间、央视解说沉默了](/articles/cdt/338477.md)
 
 7-29 [【网络民议】“央视解说沉默了，直播这事不适合央视，不能完全把控局面”](/articles/cdt/338489.md)
 
@@ -596,8 +600,4 @@
 6-20 [天涯行路｜桂林洪水上热搜的时候，“正在退水”也上热搜了](/articles/cdt/339469.md)
 
 6-20 [古老板的老巢｜俄罗斯与朝鲜结盟，东北亚局势巨变](/articles/cdt/339471.md)
-
-6-20 [唐一水｜停更10个月，我回来了](/articles/cdt/339477.md)
-
-6-20 [【404文库】建设性意见｜中联部部长在海参崴出席“抵制新殖民主义”论坛，让我非常困惑](/articles/cdt/339481.md)
 
